Add missing paragraph

--- a/latex/recipe-136.tex
+++ b/latex/recipe-136.tex
@@ -54,6 +54,10 @@
 \step 菜油烧至四成火，将葱白倒下炒十余下，依次地将料酒、酱油、味精、清汤、糖汁
 （一半）、生菜油放下。
 
+\step 葱白一半，垫放在另一锅内，面上放鱼，鱼上再放葱白、泡辣椒；再将烹过的作料
+倒入鱼锅内，在文火上慢烧，至滋汁少一半时，即将鱼翻面再烧（葱辣椒仍在面上）；然
+后放香油、醪糟浮子，慢烧到汤干、鱼酥、全部亮油起锅即成。
+
 \features
 
 肉嫩骨酥，特别香鲜，亮油不见汁，冷热可食。
