--- a/latex/recipe-141.tex
+++ b/latex/recipe-141.tex
@@ -59,7 +59,7 @@
 \step 去鳝翅和切段：将鳝平放在案板上，用剪刀将鳝背翅、鳝尾翅、鳝鳃边的拨水翅全
 部剪去；然后由尾部起切段，每段长六分；切至鳝段中发现内脏时，便要改变刀法，不能
 再一刀切断，须在鳝身四周割一圈，将骨刺割断，但不要伤着内脏和弄破苦胆，再左手抓
-着鳝身，右手拿着鳝段向两头一扯，便将内脏抽出鳝段。照此作法，将整个鳝鱼弄成完整
+着鳝身，右手拿着鳝段向两头一扯，便将内脏抽出鳝段。照此做法，将整个鳝鱼弄成完整
 的鳝段。
 
 \step 定碗入笼：用蒸碗一个，先将网油铺于蒸碗中，再将鳝鱼一段一段地立放在网油
