--- a/latex/recipe-019.tex
+++ b/latex/recipe-019.tex
@@ -67,7 +67,7 @@
 \vspace{.3125\baselineskip}%
 \quad\includegraphics[scale=1]{illustration-001.pdf}%
 \vspace{-.1875\baselineskip}%
-\caption{尖刀圆子作法}
+\caption{尖刀圆子做法}
 \label{fig:meatball}
 \end{wrapfigure}%
 \vbadness=10000%
