--- a/latex/recipe-114.tex
+++ b/latex/recipe-114.tex
@@ -57,7 +57,7 @@
 需十分钟，炒至豆渣呈黄色，而且不吸油只吐油时，滗去油，加进锅内的原汁拌匀，舀在
 鸭子上即成。
 
-另一作法：先将鸭子出一水，蒸𤆵去骨，然后上笼蒙上纸蒸𤆵（其余操作过程同上）。
+另一做法：先将鸭子出一水，蒸𤆵去骨，然后上笼蒙上纸蒸𤆵（其余操作过程同上）。
 
 \features
 
