--- a/latex/recipe-167.tex
+++ b/latex/recipe-167.tex
@@ -54,7 +54,7 @@
 （每块五钱），拍松。
 
 \step 将锅放炉上烧红，倒入猪油，再放入姜、葱叶一份稍炒，随即加入二汤、料酒和熊
-掌，煮十分钟后捞出熊掌，倒去锅中各料不用。按此作法和用料再继续煮三次后，捞出熊
+掌，煮十分钟后捞出熊掌，倒去锅中各料不用。按此做法和用料再继续煮三次后，捞出熊
 掌把骨剔尽。
 
 \step 猪油五钱入锅，放入猪肉、鸡块煸炒，再加入酱油、姜、盐、二汤（二斤）、胡椒
