--- a/latex/recipe-166.tex
+++ b/latex/recipe-166.tex
@@ -53,8 +53,8 @@
 约四钱，拍松。
 
 \step 锅在旺火上烧红，放入猪油，先用姜四钱、葱一根下锅稍炸，随即放入二汤、料
-酒，再将鹿筋段全部放入汤中，煮十五分钟捞出；锅中各料倒去不用。按上述用料和作
-法再继续煮三次，把鹿筋捞出待用。
+酒，再将鹿筋段全部放入汤中，煮十五分钟捞出；锅中各料倒去不用。按上述用料和做法
+再继续煮三次，把鹿筋捞出待用。
 
 \step 将猪油放入锅中，再放入猪肉、鸡块煸炒，然后加入姜、料酒、二汤和味精、酱
 油、盐、鹿筋段等，烧开后全部舀入砂锅中，用微火煨至鹿筋𤆵时为度。
