--- a/latex/recipe-168.tex
+++ b/latex/recipe-168.tex
@@ -49,7 +49,7 @@
 长的段；肥母鸡切成七分长、四分厚的条方块；猪肘肉刮洗干净；姜切成四块，拍松。
 
 \step 锅中倒入清水五斤，再放入姜、大葱、料酒和鹿冲段，用旺火煮十五分钟，将鹿冲
-捞出，其他各料倒去不用。按上述用料和作法再继续煮两次，捞出鹿冲，倒去锅中其他各
+捞出，其他各料倒去不用。按上述用料和做法再继续煮两次，捞出鹿冲，倒去锅中其他各
 料。
 
 \step 砂锅中放入清水四斤，再一起放入猪肘肉、鸡块和鹿冲，上炉用旺火烧开，撇去泡
