--- a/latex/recipe-212.tex
+++ b/latex/recipe-212.tex
@@ -61,7 +61,7 @@
 透出一种盐白菜的芳香别有风味。
 
 \footnotetext{
-盐白菜为四川民间冬季家常菜。其作法是：卷心白菜一斤洗净，当中划成四瓣，晾干水
+盐白菜为四川民间冬季家常菜。其做法是：卷心白菜一斤洗净，当中划成四瓣，晾干水
 份，待菜帮柔软时用盐三钱二抹透，用手握花椒四十粒，揉搓出香味后撒在菜心中，用干
 净青石压渍五天即成。可以生拌或烧汤用。
 }
