--- a/latex/recipe-231.tex
+++ b/latex/recipe-231.tex
@@ -51,7 +51,7 @@
 开水的热度又不至沸腾。另一口锅烧红，倒入菜油烧开，取豆腐一份放入，炸至金黄色时
 用漏瓢捞出，投入草碱开水中泡四分钟，捞出放在清水中。再取豆腐一份入油中炸好捞
 出，放入草碱开水中泡五分钟，捞入清水内。再取豆腐一份入油锅中炸好，放入草碱开水
-中泡六分钟，捞出放入清水内。这种作法是使豆腐变成空心豆腐。但不能使豆腐全部空
+中泡六分钟，捞出放入清水内。这种做法是使豆腐变成空心豆腐。但不能使豆腐全部空
 完，可以用手指按一按，若空完则是碱大了，没有空则是碱小了。
 
 \step 将豆腐在开水中汆一、二次后放入碗中，再用二汤汆一、二次。将特级奶汤舀入锅
