--- a/latex/recipe-240.tex
+++ b/latex/recipe-240.tex
@@ -60,7 +60,7 @@
 
 \step 取汤瓢一个在火上烤热，用肥膘炙过，拿小调羹一个，舀起一调羹调散的蛋，倒入
 汤瓢内，均匀地摊成小蛋皮。另用小调羹一个，将按蛋皮大小舀入拌好味的肉茸，放在蛋
-皮一边，再将另一边的蛋皮翻过来粘上成饺子形；如是作法将所有鸡蛋和肉茸做成十二个
+皮一边，再将另一边的蛋皮翻过来粘上成饺子形；如是做法将所有鸡蛋和肉茸做成十二个
 蛋饺，上笼蒸一分多钟取出待用。
 
 \step 白菜秧心子淘洗干净，用化猪油（五钱）煸炒搛在盘内晾起；同时将生鸡油盛入小
