--- a/latex/recipe-270.tex
+++ b/latex/recipe-270.tex
@@ -33,7 +33,7 @@
 
 \ingredient{猪腰}{三个}
 \ingredient{小磨麻油}{数滴}
-\ingredient{清汤（作法见清汤肝膏栏）}{一大碗}
+\ingredient{清汤（做法见清汤肝膏栏）}{一大碗}
 \ingredient{胡椒面}{少许}
 \ingredient{味精}{少许}
 \ingredient{冬菜（切节子）}{一两}
