--- a/latex/recipe-286.tex
+++ b/latex/recipe-286.tex
@@ -40,7 +40,7 @@
 \ingredient{熟猪肚（切丝）}{一两}
 \ingredient{味精、胡椒面}{少许}
 \ingredient{食盐}{酌量}
-\ingredient{清汤（作法与清汤肝膏同）}{一大碗}
+\ingredient{清汤（做法与清汤肝膏同）}{一大碗}
 
 \preparation
 
