--- a/latex/recipe-297.tex
+++ b/latex/recipe-297.tex
@@ -37,7 +37,7 @@
 \preparation
 
 将熟猪蹄膀晾干水气，在瘦肉部分抹上少许水豆粉，放入辣油锅内，炸到皮面酥脆时，打
-起，油滴干后盛于盘中，以花卷、葱、酱、椒盐佐食。此系重庆一般作法，名为“软炸”。
+起，油滴干后盛于盘中，以花卷、葱、酱、椒盐佐食。此系重庆一般做法，名为“软炸”。
 
 另一炸法是：用三个鸡蛋与干豆粉调和均匀，涂在蹄膀上，下油锅中炸到微带黄红色。此
 为酥炸，吃时仍以花卷、葱、酱、椒盐佐食。
