--- a/latex/recipe-141.tex
+++ b/latex/recipe-141.tex
@@ -72,7 +72,7 @@
 待片刻，滗去清汤，再将锅内余下清汤舀入蒸碗中，再滗去清汤。将青鳝翻扣在大圆盘
 中，揭去网油不用，将白芙蓉蛋划成四块，镶于青鳝四周。再将水发竹荪切成六分长的
 段，在二汤中汆热，镶于青鳝四周。再将特级清汤放入锅中，加盐、胡椒面、味精、料酒
-等烧开、倒入圆盘中上席。
+等烧开，倒入圆盘中上席。
 
 \features
 
