--- a/latex/recipe-148.tex
+++ b/latex/recipe-148.tex
@@ -48,10 +48,10 @@
 \step 鲜鱼破腹、去鳞、去内脏。从鱼头下起刀将鱼身两面的肉顺着片下，鱼肉宰成四
 段，去刺去骨，用平刀片成长约一寸五的片子二十四至二十八片。火腿、鲜笋、鸡松菌，
 切成长约一寸五分的二粗丝各二十四至二十八根；将以上各丝一根放鱼片的一端顺着裹，
-交口处抹蛋清豆粉粘着，盛入碗内上笼气约三分钟（即打一火），使鱼卷受蒸气后不易散
+交口处抹蛋清豆粉粘着，盛入碗内上笼汽约三分钟（即打一火），使鱼卷受蒸气后不易散
 脱。
 
-\step 菜油烧至八成火，即将气过的鱼卷在蛋清豆粉内滚一层，边滚边逐个放入油内，待
+\step 菜油烧至八成火，即将汽过的鱼卷在蛋清豆粉内滚一层，边滚边逐个放入油内，待
 炸至金黄色即将油滗去，淋入香油，将炒锅几颠，即上盘，镶生菜上桌，连椒盐二碟同
 上。
 
