--- a/latex/recipe-150.tex
+++ b/latex/recipe-150.tex
@@ -57,7 +57,7 @@
 \step 将锅放在旺火上放入猪油，烧至六成火，将搅好的鱼茸用调羹舀圆入锅内，炸泡成
 白色鱼圆，入碗，用清汤漂起；再将鲜菜淘净，炒好，放入碗内待用。
 
-\step 走菜时将鱼圆气热，将锅放于火炉上，下油烧至六成火，放下姜、葱、蒜、味精、
+\step 走菜时将鱼圆汽热，将锅放于火炉上，下油烧至六成火，放下姜、葱、蒜、味精、
 胡椒、盐、口蘑、鲜笋、火腿等片稍炒数转，加入清汤，放下水豆粉，勾芡，兑成滋汁；
 将炒好的鲜菜放在盘内，将漂起的鱼圆滗去汤，入锅推数转盛于盘内即成。
 
