--- a/latex/recipe-157.tex
+++ b/latex/recipe-157.tex
@@ -57,7 +57,7 @@
 淘洗一次，去渣，滤干水份，用清汤煨一次待用。
 
 \step 芙蓉蛋由笼上取出拨于碗中，将煨好的虾仁舀于蛋面上，再放上鸡肉、鲜笋、火
-腿等丁，清汤用肉茸扫一次加少许及胡椒面、味精灌入碗内上席。
+腿等丁，清汤用肉茸扫一次加盐少许及胡椒面、味精灌入碗内上席。
 
 \features
 
