--- a/latex/recipe-143.tex
+++ b/latex/recipe-143.tex
@@ -48,10 +48,10 @@
 
 \preparation
 
-\step 大鲢鱼头一个，挖去鳃，去掉牙板骨，在水中清洗干净对准鱼口从脑顶骨中砍开，
-不要砍断。鸡足鸭掌洗干净，在开水锅内紧一下，去掉粗皮。白菌菰用清水泡半小时，待
-菌已开始胀，用手刮洗去泥沙，再在沸水锅内煮约十分钟，使菌发至全透；大的用刀对剖
-成两瓣。猪肥膘肉切成一寸长、三分宽厚的条。
+\step 大鲢鱼头一个，挖去鳃，去掉牙板骨，在水中清洗干净；对准鱼口从脑顶骨中砍
+开，不要砍断。鸡足鸭掌洗干净，在开水锅内紧一下，去掉粗皮。白菌菰用清水泡半小
+时，待菌已开始胀，用手刮洗去泥沙，再在沸水锅内煮约十分钟，使菌发至全透；大的用
+刀对剖成两瓣。猪肥膘肉切成一寸长、三分宽厚的条。
 
 \step 猪油放入大炒锅内置于旺火上烧至七成热，即将鱼头放入稍炸，并烹入料酒，炸至
 略呈微黄色时捞出；滗去猪油，留一、二两在锅内，将猪肥膘肉及鸡鸭足、料酒、葱姜放
