Manual layout adjustment for the whole chapter

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -309,19 +309,22 @@
 \begin{tocminipageright}
 \input{recipe-135.tex}
 \input{recipe-136.tex}
+\enlargethispage{.3125\baselineskip}
 \input{recipe-137.tex}
+\enlargethispage{.3125\baselineskip}
 \input{recipe-138.tex}
 \input{recipe-139.tex}
 \input{recipe-140.tex}
+\vspace{1\baselineskip}
 \input{recipe-141.tex}
 \input{recipe-142.tex}
 \input{recipe-143.tex}
 \end{tocminipageright}
 \tocclearpage
 \begin{tocminipageleft}
-\enlargethispage{.25\baselineskip}
+\enlargethispage{.3125\baselineskip}
 \input{recipe-144.tex}
-\enlargethispage{.25\baselineskip}
+\enlargethispage{.3125\baselineskip}
 \input{recipe-145.tex}
 \input{recipe-146.tex}
 \input{recipe-147.tex}
