--- a/latex/recipe-168.tex
+++ b/latex/recipe-168.tex
@@ -45,7 +45,7 @@
 
 \preparation
 
-\step 鹿冲刮去粗皮和杂质，再剖开刮去里面的粗皮杂质，相清水洗刷干净，切成一寸半
+\step 鹿冲刮去粗皮和杂质，再剖开刮去里面的粗皮杂质，用清水洗刷干净，切成一寸半
 长的段；肥母鸡切成七分长、四分厚的条方块；猪肘肉刮洗干净；姜切成四块，拍松。
 
 \step 锅中倒入清水五斤，再放入姜、大葱、料酒和鹿冲段，用旺火煮十五分钟，将鹿冲
