Remove extra Ideographic Comma

--- a/latex/recipe-171.tex
+++ b/latex/recipe-171.tex
@@ -41,11 +41,11 @@
 
 \preparation
 
-\step 鱼肚切片成长七分、宽五分的小块，炒锅放火炉上，放、入猪油烧至五成热时，将
-鱼肚放入浸五分钟，捞起晾冷，用刀试切，不顶刀的为合格。再将油烧至七成热，再将鱼
-肚放入浸五分钟。然后改用旺火把鱼肚炸泡，炸时不断用漏瓢将鱼肚翻动，使其炸透心，
-随即捞出。晾冷后放入清水中去其油汁。捞出放入热米汤中，挤去油垢，再用清水泡胀。
-鸡皮切成长一寸二分、宽五分的片，放入蒸碗中，上笼蒸𤆵。
+\step 鱼肚切片成长七分、宽五分的小块，炒锅放火炉上，放入猪油烧至五成热时，将鱼
+肚放入浸五分钟，捞起晾冷，用刀试切，不顶刀的为合格。再将油烧至七成热，再将鱼肚
+放入浸五分钟。然后改用旺火把鱼肚炸泡，炸时不断用漏瓢将鱼肚翻动，使其炸透心，随
+即捞出。晾冷后放入清水中去其油汁。捞出放入热米汤中，挤去油垢，再用清水泡胀。鸡
+皮切成长一寸二分、宽五分的片，放入蒸碗中，上笼蒸𤆵。
 
 \step 锅放炉上，放入奶汤、鱼肚、鸡皮、鲜菜，再用盐、料酒等煮三分钟起锅（鲜菜垫
 底），盛入大圆盘中上席。
