--- a/latex/recipe-052.tex
+++ b/latex/recipe-052.tex
@@ -51,7 +51,7 @@
 一寸五的段，放入碗内，加清汤入笼，大火蒸一小时半。又将火腿、兰片、鸡松切成一寸
 二长、五分宽的片，放于盘内待用。
 
-\step 将锅放于旺火上，倒入化油，烧至六成火候，将葱、姜投入油锅，稍炸，打去不
+\step 将锅放于旺火上，倒入化猪油，烧至六成火候，将葱、姜投入油锅，稍炸，打去不
 用，再投入火腿、鸡松、兰片，又将笼内的环喉取出投入锅内，加入料酒、胡椒、味精、
 酱油、盐，炒动数转，再放入清汤，烧三分钟，勾入水豆粉起锅，淋入鸡油，再入盘内即
 成。
