--- a/latex/recipe-173.tex
+++ b/latex/recipe-173.tex
@@ -58,9 +58,9 @@
 散后，搛入碗内，再放下化猪油和建兰菜，炒熟，加少许盐、料酒，起锅装于走菜的盘
 内。
 
-\step 放入余下的化油入锅内，放入豆瓣煵出红色，放下甜酱、清汤，打尽豆瓣渣，将海
-参及烂肉一并倒入锅内，加料酒、酱油、味精、蒜苗花，烧至亮油，加水豆粉，起锅时淋
-入香油，搛入建兰菜的面上即成。
+\step 放入余下的化猪油入锅内，放入豆瓣煵出红色，放下甜酱、清汤，打尽豆瓣渣，将
+海参及烂肉一并倒入锅内，加料酒、酱油、味精、蒜苗花，烧至亮油，加水豆粉，起锅时
+淋入香油，搛入建兰菜的面上即成。
 
 \features
 
