--- a/latex/recipe-174.tex
+++ b/latex/recipe-174.tex
@@ -47,13 +47,13 @@
 
 \preparation
 
-\step 将锅放在炉上，倒入化油，烧至四成火，投入洗净的鱼肚，微火慢慢地炸泡；泡后
-捞起，放在温热水内泡胀，再切成一寸五的斧头块。又将羊肚洗净，切成一寸五长、五分
-宽，分开装入碗内；再将料酒、盐、姜、葱、清汤放入羊肚碗内上笼蒸𤆵。火腿、冬笋切
-成一寸五的薄片，选好豌豆尖苞待用。
+\step 将锅放在炉上，倒入化猪油，烧至四成火，投入洗净的鱼肚，微火慢慢地炸泡；泡
+后捞起，放在温热水内泡胀，再切成一寸五的斧头块。又将羊肚洗净，切成一寸五长、五
+分宽，分开装入碗内；再将料酒、盐、姜、葱、清汤放入羊肚碗内上笼蒸𤆵。火腿、冬笋
+切成一寸五的薄片，选好豌豆尖苞待用。
 
 \step 将锅放在旺火上，倒入清汤、胡椒、盐、料酒、味精，烧至微开，倒下鱼肚，烧三
-分钟，捞起鱼肚，倒去锅内的汤不用；再将锅放在旺火上，放入化油烧至五成火，投入
+分钟，捞起鱼肚，倒去锅内的汤不用；再将锅放在旺火上，放入化猪油烧至五成火，投入
 姜、葱、奶汤，再捞起姜、葱不用，将汤烧至微开投入火腿、冬笋片、盐、味精、料酒、
 胡椒，再将鱼、羊肚一并投入锅内，约煮五分钟放入豌豆尖苞，淋入鸡油，起锅入大汤盘
 内即成。
