--- a/latex/recipe-211.tex
+++ b/latex/recipe-211.tex
@@ -49,9 +49,9 @@
 下留作别用。冬笋修好后切成长一寸三、厚二分的片子，再用手按二分宽撕成细一字条。
 用旺火将油烧至八成热，将冬笋条倒入锅内炸成牙黄色，用漏瓢将笋子捞起待用。
 
-\step 芽菜淘洗后挤干，与猪肉分别剁成细末。炒锅在旺火上用化油一两五将肉末煵干水
-气至亮油，依次放入盐、料酒、冬笋、酱油、醪糟、味精，将冬笋造匀，再倒芽菜，煸一
-分钟时间放入香油，把炒锅几簸，上盘。
+\step 芽菜淘洗后挤干，与猪肉分别剁成细末。炒锅在旺火上用化猪油一两五将肉末煵干
+水气至亮油，依次放入盐、料酒、冬笋、酱油、醪糟、味精，将冬笋造匀，再倒芽菜，煸
+一分钟时间放入香油，把炒锅几簸，上盘。
 
 \features
 
