--- a/latex/recipe-216.tex
+++ b/latex/recipe-216.tex
@@ -54,8 +54,8 @@
 腿、肉颗的碗内，放下味精、盐、料酒、胡椒面拌匀。将选好的生菜洗净，切成丝或撕成
 块，用清水漂起待用。
 
-\step 将炒锅放于旺火上，倒下化油烧至六成热时，将拌好的豆芽瓣，做成一寸过心、三
-分厚的小圆饼，共做二十四个，边做边投入油锅炸至稍带黄色捞起。再将锅内的油烧至
+\step 将炒锅放于旺火上，倒下化猪油烧至六成热时，将拌好的豆芽瓣，做成一寸过心、
+三分厚的小圆饼，共做二十四个，边做边投入油锅炸至稍带黄色捞起。再将锅内的油烧至
 七、八成热时，将炸好的豆芽饼一并投入油锅内炸成金黄色，滗去余油，淋入香油，起锅
 摆入盘的中央。
 
