--- a/latex/recipe-217.tex
+++ b/latex/recipe-217.tex
@@ -51,16 +51,16 @@
 \step 先将萝卜挖心去皮，修好，留盖，清洗干净。再将鱼肉去尽刺，切成二分见方的
 丁。将火腿、口蘑、金钩切成同鱼肉一样大小的丁，分开放入盘内待用。
 
-\step 将鱼肉用蛋清豆粉、料酒及少许盐拌和均匀；再将锅放于旺火上，倒入化油，将拌
-好的鱼肉入锅滑散；滗去余油，放下切好的口蘑、火腿、金钩，混合炒匀成馅。
+\step 将鱼肉用蛋清豆粉、料酒及少许盐拌和均匀；再将锅放于旺火上，倒入化猪油，将
+拌好的鱼肉入锅滑散；滗去余油，放下切好的口蘑、火腿、金钩，混合炒匀成馅。
 
 \step 将锅放在旺火上，放下化猪油，烧至五成火，放下萝卜炸透（火不宜大，保持白
 色），炸至五分钟左右捞起，放入二鱼碗内，口向上，平排放于碗内；再放入炒好的焰于
 萝卜腹内，用盖好，加清汤及盐少许于碗内；再用草纸蒙于面上，上笼蒸二十分钟，萝卜
 已𤆵即可翻入盘内。
 
-\step 将锅放于旺火上，放下化油，倒入清汤、料酒、盐、味精，开时勾清芡，淋入化鸡
-油，起锅于盘上淋入即成。
+\step 将锅放于旺火上，放下化猪油，倒入清汤、料酒、盐、味精，开时勾清芡，淋入化
+鸡油，起锅于盘上淋入即成。
 
 \features
 
