--- a/latex/recipe-217.tex
+++ b/latex/recipe-217.tex
@@ -55,7 +55,7 @@
 拌好的鱼肉入锅滑散；滗去余油，放下切好的口蘑、火腿、金钩，混合炒匀成馅。
 
 \step 将锅放在旺火上，放下化猪油，烧至五成火，放下萝卜炸透（火不宜大，保持白
-色），炸至五分钟左右捞起，放入二鱼碗内，口向上，平排放于碗内；再放入炒好的焰于
+色），炸至五分钟左右捞起，放入二鱼碗内，口向上，平排放于碗内；再放入炒好的馅于
 萝卜腹内，用盖好，加清汤及盐少许于碗内；再用草纸蒙于面上，上笼蒸二十分钟，萝卜
 已𤆵即可翻入盘内。
 
