--- a/latex/recipe-219.tex
+++ b/latex/recipe-219.tex
@@ -55,7 +55,7 @@
 鸡糁刮在菠菜叶上，抄头裹起成一寸五长、四分过心的圆筒，平放在大盘内，每个照样，
 裹完为止。再入笼大火蒸五分钟，取出拣入碗内，摆成三叠水待用。
 
-\step 将锅置于旺火上，放入化猪油，再放入姜葱，暴出香味捞起不用，再倒入奶汤四
+\step 将锅置于旺火上，放入化猪油，再放入姜葱，爆出香味捞起不用，再倒入奶汤四
 两，放入味精、料酒，胡椒、盐及泹后漂起的菠菜心，滋汁开时打起菠菜心于走菜的条盘
 内；再将蒸好的菠菜卷翻入条盘菠菜上边，又将锅内的滋汁扯成二流芡，起锅时淋入化鸡
 油，再淋入盘内即成。
