--- a/latex/recipe-247.tex
+++ b/latex/recipe-247.tex
@@ -50,10 +50,10 @@
 \step 用一个鸡蛋摊成蛋皮。丝瓜刮后车下瓜皮，用沸水泹熟捞起，切成二寸长的段，用
 清水漂起。将鲜笋煮熟，火腿连同丝瓜皮等都切成二寸长的细丝，分开装入盘内待用。
 
-\step 猪瘦肉、生鸡脯肉各捶成茸子，分开装入碗内。用二十根瓷调羹，抹上一层化油，
-依次摆入圆盘内，将切好的蛋皮、丝瓜、火腿、鲜笋丝各放三根在调羹把上头，二十根同
-样放完，再打破鸽蛋，逐一放在调羹内，将丝的一头压着，上笼蒸五分钟即熟。取出调羹
-内的鸽蛋，装入一个碗内用清汤漂起。
+\step 猪瘦肉、生鸡脯肉各捶成茸子，分开装入碗内。用二十根瓷调羹，抹上一层化猪
+油，依次摆入圆盘内，将切好的蛋皮、丝瓜、火腿、鲜笋丝各放三根在调羹把上头，二十
+根同样放完，再打破鸽蛋，逐一放在调羹内，将丝的一头压着，上笼蒸五分钟即熟。取出
+调羹内的鸽蛋，装入一个碗内用清汤漂起。
 
 \step 炒锅放于旺火上，放入一斤半清汤、料酒、盐，再将捶好的猪瘦肉茸子用清水解
 散，倒入锅内用汤瓢推动数转，肉沫浮起打尽；再将鸡脯肉用清水解散倒入锅内，肉沫浮
