--- a/latex/recipe-264.tex
+++ b/latex/recipe-264.tex
@@ -64,16 +64,16 @@
 
 \step 生鸡、猪骨，用清水洗净，除去血水，放入罐内；龙凤翅放于罐内生鸡骨上面。
 
-\step 炒锅放于旺火上，放下化油及糖，炒成糖汁，呈金黄色。再倒入清汤二斤，将糖汁
-冲散，倒入盛龙凤翅的罐内，加入酱油、料酒、盐、老姜（拍破）、葱（捆成把）；将罐
-在小火上烧四十分钟左右（汤烧至一半以上），龙凤翅已𤆵，提离火口，捞起龙凤翅于二
-鱼碗内，龙凤各占碗的一半。罐内的汤灌入二鱼碗内（留一半待用），放入笼内大火蒸三
-十分钟待用。
+\step 炒锅放于旺火上，放下化猪油及糖，炒成糖汁，呈金黄色。再倒入清汤二斤，将糖
+汁冲散，倒入盛龙凤翅的罐内，加入酱油、料酒、盐、老姜（拍破）、葱（捆成把）；将
+罐在小火上烧四十分钟左右（汤烧至一半以上），龙凤翅已𤆵，提离火口，捞起龙凤翅于
+二鱼碗内，龙凤各占碗的一半。罐内的汤灌入二鱼碗内（留一半待用），放入笼内大火蒸
+三十分钟待用。
 
-\step 鲜菜洗净后炒熟放于碗内，再放化油于锅内，倒入罐内余的一半原汁、一分胡椒、
-三分味精，水豆粉勾芡，再取出笼内的装龙凤翅的碗，将生菜放在碗的上边，再翻入大圆
-盘内，淋入三钱化鸡油，余下的鸡油及香油二钱一并投入锅内，起锅将原汁淋于龙凤翅上
-即成。
+\step 鲜菜洗净后炒熟放于碗内，再放化猪油于锅内，倒入罐内余的一半原汁、一分胡
+椒、三分味精，水豆粉勾芡，再取出笼内的装龙凤翅的碗，将生菜放在碗的上边，再翻入
+大圆盘内，淋入三钱化鸡油，余下的鸡油及香油二钱一并投入锅内，起锅将原汁淋于龙凤
+翅上即成。
 
 \features
 
