--- a/latex/recipe-182.tex
+++ b/latex/recipe-182.tex
@@ -46,7 +46,7 @@
 \step 先将鱿鱼放于温水中泡一小时，淘洗干净，去头尾，用快刀片成长二寸二、宽一寸
 六的完整、均匀而极薄的片，盛入碗中。再用五成开的热水淘洗一次，滗去热水，随后用
 草碱拌匀，加入开水，盖上盖；焖到水温下降至不烫手时，将水滗去一半，再倒入开水加
-盖焖。如此重复操作三、四次，使鱿鱼片达到色白、透明、体软度，然后用清水漂着待
+盖焖。如此重复操作三、四次，使鱿鱼片达到色白、透明、体软为度，然后用清水漂着待
 用。
 
 \step 菠菜去外叶不用，但须保持根上有红色的一段，共得心一两，淘洗干净；入开水中
