--- a/latex/recipe-191.tex
+++ b/latex/recipe-191.tex
@@ -52,7 +52,7 @@
 出；去尽杂质，再放入料酒、盐、清汤汆一次，捞起晾干水气；火腿、丝瓜皮、木耳、蛋
 皮各用刀切成一寸长的细丝，连同鱼翅造匀待用。
 
-\step 鸡脯、肥膘、鸡蛋清等打成“鸡糁”。用大磁盘一个，先在盘内将造匀的鱼翅等铺开
+\step 鸡脯、肥膘、鸡蛋清等打成“鸡糁”。用大瓷盘一个，先在盘内将造匀的鱼翅等铺开
 三分之一，把鸡糁舀成二十八个糁圆子放在丝上面；再将其余的三分之二丝子均匀地盖在
 面上；然后再一个一个地拈入手中，将各丝连同糁圆子团成绣球形；在垫好纱布的笼内蒸
 五分钟成半成品；再拣入鱼碗内，掺好汤、胡椒、料酒少许。走菜前气热，临走时滗去蒸
