--- a/latex/recipe-262.tex
+++ b/latex/recipe-262.tex
@@ -76,7 +76,7 @@
 \step 锅置火上，放入猪油，加入姜（拍松）、葱切成五分长的短节，随即放入奶汤和鱼
 骨刺，烧沸，约五分钟捞去鱼骨刺和姜、葱，把汤舀入铜锅内为鱼羹汤。
 
-\step 桌上放一粗磁深盘，盘内盛酒精，盘上加铜架，架上放铜锅，吃时将酒精燃烧，锅
+\step 桌上放一粗瓷深盘，盘内盛酒精，盘上加铜架，架上放铜锅，吃时将酒精燃烧，锅
 内汤沸时先将菊花放下，次将各类生肉、生菜分别于汤内烫熟吃（除生片、生菜外其余油
 酥忌下锅内）。
 
