--- a/latex/recipe-268.tex
+++ b/latex/recipe-268.tex
@@ -45,8 +45,9 @@
 \preparation
 
 肥、瘦肉均切成极细小的颗粒（不宜用刀宰，否则不散口），盛入碗内，加少许清水、阴
-米粉、鸡蛋、绍酒、食盐、姜汁、胡椒等，混合搅掺，掺至水份为肉吸收时，制成圆饼状，
-连同冬菜、豆芽盛入小磁盅内，加进清水（以水刚淹没肉饼为度），蒸约半小时即成。
+米粉、鸡蛋、绍酒、食盐、姜汁、胡椒等，混合搅掺，掺至水份为肉吸收时，制成圆饼
+状，连同冬菜、豆芽盛入小瓷盅内，加进清水（以水刚淹没肉饼为度），蒸约半小时即
+成。
 
 \features
 
