--- a/latex/recipe-193.tex
+++ b/latex/recipe-193.tex
@@ -58,7 +58,7 @@
 腿、丝瓜皮、蛋皮细丝小片等，先小片后细丝顺着半月形的糁一路路安成花边，成荷包
 状。安好后将鱿鱼逐个拣在大瓷盘内，上笼蒸三分钟取出。
 
-\step 走菜时可另用一蒸碗将鱿鱼拣入（糁向下）上笼气热，翻入大碗内。炒锅内掺清
+\step 走菜时可另用一蒸碗将鱿鱼拣入（糁向下）上笼汽热，翻入大碗内。炒锅内掺清
 汤、加酱油、盐、味精、胡椒等用肉茸清好，灌入即成。
 
 \features
