--- a/latex/recipe-197.tex
+++ b/latex/recipe-197.tex
@@ -41,7 +41,7 @@
 \preparation
 
 \step 选猪肋条上的净肥膘肉一方，在开水锅内煮约一小时左右（肉熟透微𤆵），捞起晾
-冷，切成长一寸二、宽厚各二分的肉条；把鸡蛋（连蛋黄）与干豆粉调成蛋糊；把切好后
+冷，切成长一寸三、宽厚各三分的肉条；把鸡蛋（连蛋黄）与干豆粉调成蛋糊；把切好后
 的肉条在沸水内煮热，用拧干的热布帕将肉条水份沾干，在碗内与蛋糊拌合调匀，使肉条
 都裹上一层蛋糊。
 
