--- a/latex/recipe-203.tex
+++ b/latex/recipe-203.tex
@@ -50,7 +50,7 @@
 \step 枣泥、桃仁、洗沙连同猪油拌匀成馅子。
 
 \step 网油洗净晾干，修去边角，切成二寸见方的小块，平铺抹上蛋清豆粉，每块网油上
-放枣泥焰子一份，四角抄严裹好，放在笼上蒸五分钟取出，用箩筛上干豆粉。
+放枣泥馅子一份，四角抄严裹好，放在笼上蒸五分钟取出，用箩筛上干豆粉。
 
 \step 菜油烧至七成火，即将枣卷倒入炸至浅黄色，用漏瓢捞起盛入盘内，撒上白糖即
 成。
