--- a/latex/recipe-024.tex
+++ b/latex/recipe-024.tex
@@ -51,7 +51,7 @@
 轻轻调匀待用。
 
 \step 猪肉、冬笋、口蘑，分别用刀剁碎。锅内放猪油少许，将猪肉调匀，依次加入蛋
-黄、冬笋、口蘑、料酒及葱花、酱油、白糖、五香面等，炒熟成焰子，起锅待用。
+黄、冬笋、口蘑、料酒及葱花、酱油、白糖、五香面等，炒熟成馅子，起锅待用。
 
 \step 炒锅置于文火上，将猪油烧至三成热，把调好的蛋泡倒入一半，煎成圆形、直径约
 六寸的蛋饼。将炒熟的馅子，倒于蛋饼中心，立即将另一半蛋泡盖于馅子上，并按上鲜豆
