--- a/latex/recipe-093.tex
+++ b/latex/recipe-093.tex
@@ -51,7 +51,7 @@
 用手搓揉，使壳在水面浮起，用漏瓢打去，将余下芝麻在热锅上炕成浅黄色至熟。鸡蛋清
 调成蛋清豆粉，同鸡泥、茨菰泥加盐、胡椒面、香油、料酒共拌成馅。
 
-\step 先用芝麻一半在九寸盘内铺匀，再放拌好的焰于盘内，用手拍压平整约四分厚，剩
+\step 先用芝麻一半在九寸盘内铺匀，再放拌好的馅于盘内，用手拍压平整约四分厚，剩
 余一半芝麻均匀地撒在上面成半制品。
 
 \step 炒锅在中火上先放菜油四两，烧至四成热，即将盘内加工好的半制品由锅边轻轻梭
