--- a/latex/recipe-207.tex
+++ b/latex/recipe-207.tex
@@ -47,7 +47,7 @@
 
 \step 鲜藕选粗壮部分，只削一头，以能露孔为度；在清水中将内外淘洗干净，用削尖的
 竹筷按孔透畅通；再将干酒米由孔装入抖紧，并用刀背敲拍孔口，使之封闭不漏；放入沸
-水中煮把，捞于清水中漂起，刮去藕外面一层粗皮，切成两分厚的圆片待用。
+水中煮𤆵，捞于清水中漂起，刮去藕外面一层粗皮，切成两分厚的圆片待用。
 
 \step 莲米刷净去心，连同苡仁、百合、芡实洗净，加清水上笼蒸𤆵；瓜片、橘红切成指
 甲壳；蜜樱桃对剖。
