--- a/latex/recipe-209.tex
+++ b/latex/recipe-209.tex
@@ -44,7 +44,7 @@
 \step 鲜笋选好后，用子母火将笋周身盖完，慢慢烧干水份待鲜笋烧软至熟，剥去外壳，
 削去笋皮和笋篼。
 
-\step 削净的鲜笋用刀拍破，再用手撕成竹筷粗细的丝子切至一寸五长的节。
+\step 削净的鲜笋用刀拍破，再用手撕成竹筷粗细的丝子，切至一寸五长的节。
 
 \step 干辣椒先在火上烧成黑红色，把灰渣抹干净，去蒂和籽，用刀铡细，加酱油、盐、
 味精、香油调好，和笋丝共同拌匀，面上淋辣椒油即成。
