--- a/latex/recipe-212.tex
+++ b/latex/recipe-212.tex
@@ -58,7 +58,7 @@
 \features
 
 冬笋为冬季时菜之一，吃法很多，如加金钩、宣腿、酱烧都可。与盐白菜同烧，鲜笋中更
-透出一种盐白菜的芳香别有风味。
+透出一种盐白菜的芳香，别有风味。
 
 \footnotetext{
 盐白菜为四川民间冬季家常菜。其做法是：卷心白菜一斤洗净，当中划成四瓣，晾干水
