Remove extra text

--- a/latex/recipe-214.tex
+++ b/latex/recipe-214.tex
@@ -51,8 +51,7 @@
 条盘内，分两堆，刀口都向外，再将笋尖放在笋头的上边；摆好后再将露笋的原汁汤由上
 面淋入盘内，走菜时，配下面四样碟子上席。
 
-\step 番茄酱五钱、汤一两、香油一钱、盐一分配为一个碟子。椒麻三钱、酱油五钱、
-汤一两、香油一钱、盐一分配成一个碟子。
+\step 番茄酱五钱、汤一两、香油一钱、盐一分配为一个碟子。
 
 \step 椒麻三钱、酱油五钱、汤一两、香油一钱、盐一分配成一个碟子。
 
