Remove comma, add semicolon

--- a/latex/recipe-219.tex
+++ b/latex/recipe-219.tex
@@ -48,7 +48,7 @@
 
 \preparation
 
-\step 选大小均匀的菠菜叶三十片，用开水泹后用清水漂，起；将菠菜心泹后同样漂起再
+\step 选大小均匀的菠菜叶三十片，用开水泹后用清水漂起；将菠菜心泹后同样漂起；再
 将鸡脯肉及肥膘捶茸，同蛋清打成“糁”，放入碗内待用。
 
 \step 将余的一个蛋清拌成蛋清豆粉，将清水漂起的菠菜叶平铺于案上，沾干水份，又将
