--- a/latex/recipe-218.tex
+++ b/latex/recipe-218.tex
@@ -67,8 +67,8 @@
 \step 菜油舀入锅中，放在旺火上烧至微冒烟时，即移微火上；然后用手逐一将酿茄片立
 着在蛋清豆粉中滚一转，沾上封口处，随即放入油锅中炸；要边沾边炸，不可全部沾好再
 炸，否则易裂口；待茄片炸至周边呈金黄色即捞起，边炸边捞。全部炸完后，把余下蛋清
-豆粉加入清水少许调匀将茄饼放入，用手从下向上轻轻翻转，把蛋清豆粉沾裹完，再放入
-油中炸成金黄色捞起，滤尽油，摆入盘中。
+豆粉加入清水少许调匀，将茄饼放入，用手从下向上轻轻翻转，把蛋清豆粉沾裹完，再放
+入油中炸成金黄色捞起，滤尽油，摆入盘中。
 
 \step 锅内滗去余油，留油一两半放在旺火上，待油冒烟时下姜、蒜末，炒香，随将酱
 油、盐、水豆粉、料酒、味精、白糖、泡红辣椒末（将泡辣椒剁成极细碎末）等放在一个
