--- a/latex/recipe-220.tex
+++ b/latex/recipe-220.tex
@@ -46,7 +46,7 @@
 \preparation
 
 \step 红番茄在沸水中烫过，去皮、去籽，用刀片开。丝瓜将皮用刀车下；均泹熟漂冷
-透。鸡蛋两个摊成蛋皮。鸡脯构、生板油分别砸茸，加清水、豆粉、盐搅成“鸡糁”。调蛋
+透。鸡蛋两个摊成蛋皮。鸡脯肉、生板油分别砸茸，加清水、豆粉、盐搅成“鸡糁”。调蛋
 清豆粉。
 
 \step 捞出漂起的番茄片、丝瓜皮，沾干水份，连同蛋皮各抹上一层蛋清豆粉，再将“鸡
