--- a/latex/recipe-221.tex
+++ b/latex/recipe-221.tex
@@ -56,7 +56,7 @@
 
 \step 蛋皮和笋片尽材料同样裹成粗细成与青笋等一样大小的长卷，一并拣入盘内。上笼
 蒸五分钟取下，蛋皮冬笋卷各切成六分长的节子，蒸溢出来的糁两头修齐，使之整齐光
-洁。走菜前装入碗内气热，临走时翻入碗内，灌入烧好的特级清汤即成。
+洁。走菜前装入碗内汽热，临走菜时翻入碗内，灌入烧好的特级清汤即成。
 
 \features
 
