--- a/latex/recipe-220.tex
+++ b/latex/recipe-220.tex
@@ -53,8 +53,8 @@
 糁”舀上，片从两头相对裹拢成如意形，中间用蛋清豆粉粘稳，入盘上笼蒸五分钟，取出
 晾冷，各切四分厚片块，再用蒸碗依次订好，上笼馏热。
 
-\step 走菜时锅内烧清汤，吃味扫清亮，先将馏热的各卷翻入碗内，用瓢子隔着注入锅内
-的清汤即成。
+\step 走菜时锅内烧清汤，吃味，扫清亮，先将馏热的各卷翻入碗内，用瓢子隔着注入锅
+内的清汤即成。
 
 \features
 
