--- a/latex/recipe-223.tex
+++ b/latex/recipe-223.tex
@@ -55,7 +55,7 @@
 
 \preparation
 
-\step 以上主料除火腿、口蘑外都洗净、微煮，除去腥味启，改成五分见方的方块，加味
+\step 以上主料除火腿、口蘑外都洗净、微煮，除去腥味后，改成五分见方的方块，加味
 上笼蒸𤆵。口蘑剪成小蜂窝形。火腿切成指甲壳待用。
 
 \step 用虾仁一半与肥膘、蛋清二个搅成“虾糁”，豆腐去皮过萝，混同虾糁搅匀。用大圆
