--- a/latex/recipe-223.tex
+++ b/latex/recipe-223.tex
@@ -58,7 +58,7 @@
 \step 以上主料除火腿、口蘑外都洗净、微煮，除去腥味后，改成五分见方的方块，加味
 上笼蒸𤆵。口蘑剪成小蜂窝形。火腿切成指甲壳待用。
 
-\step 用虾仁一半与肥膘、蛋清二个搅成“虾糁”，豆腐去皮过萝，混同虾糁搅匀。用大圆
+\step 用虾仁一半与肥膘、蛋清二个搅成“虾糁”，豆腐去皮过箩，混同虾糁搅匀。用大圆
 盘一个，先涂上少许一层油，将搅合的虾糁按直径六寸面积用小刀刮平刮圆，上笼蒸五分
 钟取下。鸡蛋清三个加面粉，快速调成蛋泡，再盖于糁上刮平整，又上笼气二分钟取下，
 用筷子在上面插成均匀整齐的小孔，如蜂窝状。留下的一半虾仁，在沸水内冒成红色，捞
