--- a/latex/recipe-222.tex
+++ b/latex/recipe-222.tex
@@ -53,7 +53,7 @@
 丝瓜皮切成如豆腐颗大小的颗子。
 
 \step 油在锅内烧至四成热，将葱、姜下油锅一煸炒，烹入清汤煮沸即打去葱、姜。用漏
-瓢捞起漂好的豆腐，倒下锅即旅味精、胡椒面、料酒、盐及切好的丝瓜、鸡蛋、金钩，烧
+瓢捞起漂好的豆腐，倒下锅即加味精、胡椒面、料酒、盐及切好的丝瓜、鸡蛋、金钩，烧
 至汤沸即挂二流芡，再加鸡油混合造转，盛入大薄碗即成。
 
 \features
