--- a/latex/recipe-223.tex
+++ b/latex/recipe-223.tex
@@ -60,7 +60,7 @@
 
 \step 用虾仁一半与肥膘、蛋清二个搅成“虾糁”，豆腐去皮过箩，混同虾糁搅匀。用大圆
 盘一个，先涂上少许一层油，将搅合的虾糁按直径六寸面积用小刀刮平刮圆，上笼蒸五分
-钟取下。鸡蛋清三个加面粉，快速调成蛋泡，再盖于糁上刮平整，又上笼气二分钟取下，
+钟取下。鸡蛋清三个加面粉，快速调成蛋泡，再盖于糁上刮平整，又上笼汽二分钟取下，
 用筷子在上面插成均匀整齐的小孔，如蜂窝状。留下的一半虾仁，在沸水内冒成红色，捞
 起，晾干水气，即按每个蜂窝孔嵌入一半在内。走菜时，先在笼上取下什锦，垫入碗底，
 上面即是蜂窝豆腐糁，周围镶火腿、口蘑、豆尖，再灌入烧好的清汤即成。
