--- a/latex/recipe-225.tex
+++ b/latex/recipe-225.tex
@@ -49,9 +49,9 @@
 
 \preparation
 
-\step 韭菜叶淘净加盐，揉搓挤出汁水，用纱布滤净，盛入碗内。用丝箩把捏散的豆腐
-过一道（先入热水内除去但𥑲水味）。蛋清快速调成蛋泡。肥膘肉剁茸不见籽粒。火腿、
-金钩、口蘑均切成细颗待用。
+\step 韭菜叶淘净加盐，揉搓挤出汁水，用纱布滤净，盛入碗内。用丝箩把捏散的豆腐过
+一道（先入热水内除去𥑲水味）。蛋清快速调成蛋泡。肥膘肉剁茸不见籽粒。火腿、金
+钩、口蘑均切成细颗待用。
 
 \step 将干豆粉、盐、面粉、味精、胡椒，在碗内和匀。加蛋清、肥膘茸、豆腐茸，用力
 向着一个方向搅匀成“豆腐糁”。另用二鱼碗一个先抹一点猪肥膘茸，糊上豆腐糁一层约二
