--- a/latex/recipe-229.tex
+++ b/latex/recipe-229.tex
@@ -51,8 +51,8 @@
 \step 豆腐打成一寸二见方的墩子，对角划穿成三十个三角形。猪肉剁茸，加盐、花椒
 面、水豆粉、味精调匀成馅。豆粉合蛋清搅成蛋清豆粉。
 
-\step 豆腐投入九成热的油锅。炸成金黄色进皮捞起，挨个地从底部逢中划个小口，取出
-瓤子，掏空；然后将肉馅子填满，封口处抹上蛋清豆粉粘好合拢；再投入八成热的油锅一
+\step 豆腐投入九成热的油锅。炸成金黄色皮捞起，挨个地从底部逢中划个小口，取出瓤
+子，掏空；然后将肉馅子填满，封口处抹上蛋清豆粉粘好合拢；再投入八成热的油锅一
 炸，把封口处浸透为止，捞在盘内。
 
 \step 锅内热油二两，投入姜、葱、蒜，煵一次，烹入料酒，加酱油、味精，烧成红色，
