--- a/latex/recipe-178.tex
+++ b/latex/recipe-178.tex
@@ -33,7 +33,7 @@
 
 \ingredient{小毛鱼翅}{一两五}
 \ingredient{鸡脯肉}{二两五}
-\ingredient{鸡蛋清}{一个}
+\ingredient{鸡蛋清}{四个}
 \ingredient{熟火腿}{二钱}
 \ingredient{水豆粉}{五钱}
 \ingredient{化猪油}{四两}
