--- a/latex/recipe-160.tex
+++ b/latex/recipe-160.tex
@@ -60,7 +60,7 @@
 放入，加盐、料酒、味精、胡椒面等拌匀成为馅。
 
 \step 将切好的豆油皮平铺大平盘中，用手指粘蛋清豆粉（用鸡蛋清一个和豆粉二钱调
-成）均匀地抹在豆油皮上、每张豆油皮中央放馅二钱，将豆油皮包起来，每个虾包长约七
+成）均匀地抹在豆油皮上，每张豆油皮中央放馅二钱，将豆油皮包起来，每个虾包长约七
 分、直径约五分。
 
 \step 将锅放炉上烧红，放入猪油，烧至冒油烟的时候，将虾包放入，用微火炸成深黄
