--- a/latex/recipe-248.tex
+++ b/latex/recipe-248.tex
@@ -54,7 +54,7 @@
 
 \step 土司切成一寸二宽、一寸八长、一分五厚的棋子块二十四片。鸡脯、肥膘、蛋清等
 搅成“鸡糁”。每片土司上先涂上一层鸡糁，约二分厚；再将半边鸽蛋嵌在中间，紧挨鸽蛋
-的周围点缀小瓜子片和鱼眼睛片，增加美观，上笼气五分钟成半制成品取下。
+的周围点缀小瓜子片和鱼眼睛片，增加美观，上笼汽五分钟成半制成品取下。
 
 \step 化猪油在旺火上烧至六成热时，即将蒸好的半制成品取出，鸽蛋向下，土司向上放
 入油锅内炸；炸时用小铲细心翻动，呈金黄色时即捞起在盘中摆好，两端镶上生菜即成。
