--- a/latex/recipe-249.tex
+++ b/latex/recipe-249.tex
@@ -54,7 +54,7 @@
 
 \step 用白酒杯二十个，洗净，先将内面抹少许油，鸽蛋二十个逐一打破，每杯一个，上
 笼气一下，待鸽蛋白刚进皮（不使蛋黄气热）立即取出。将糁馅子分成二十份，用竹筷将
-每份馅子酿入酒杯的鸽蛋内，蛋黄溢出自然封口。再上笼气二分钟，至鸽蛋全熟取出，裹
+每份馅子酿入酒杯的鸽蛋内，蛋黄溢出自然封口。再上笼汽二分钟，至鸽蛋全熟取出，裹
 上碾细的干豆粉。
 
 \step 猪油在旺火上烧至五成火后，即将裹好豆粉的鸽蛋下入，边炸边翻动；炸至金黄
