--- a/latex/recipe-249.tex
+++ b/latex/recipe-249.tex
@@ -53,7 +53,7 @@
 酒、胡椒、盐等作料拌匀成糁馅子待用。
 
 \step 用白酒杯二十个，洗净，先将内面抹少许油，鸽蛋二十个逐一打破，每杯一个，上
-笼气一下，待鸽蛋白刚进皮（不使蛋黄气热）立即取出。将糁馅子分成二十份，用竹筷将
+笼汽一下，待鸽蛋白刚进皮（不使蛋黄汽热）立即取出。将糁馅子分成二十份，用竹筷将
 每份馅子酿入酒杯的鸽蛋内，蛋黄溢出自然封口。再上笼汽二分钟，至鸽蛋全熟取出，裹
 上碾细的干豆粉。
 
