--- a/latex/recipe-151.tex
+++ b/latex/recipe-151.tex
@@ -51,7 +51,7 @@
 
 \preparation
 
-\step 先将鲤鱼去鳞挖鳃，剖腹去内脏，清洗干净，放在墩子上，在鱼两面用剽刀共剽十
+\step 先将鲤鱼去鳞挖鳃，剖腹去内脏，清洗干净，放在墩子上，在鱼两面用片刀共片十
 刀，距离相等，用盐、料酒混抹，并使之浸入鱼的刀口处，放入盘中待用。
 
 \step 将鸡蛋摊成蛋皮；木耳、火腿、茨菰、丝瓜、蛋皮分别切成八分长的半圆形（为五
