--- a/latex/recipe-232.tex
+++ b/latex/recipe-232.tex
@@ -43,7 +43,7 @@
 
 \preparation
 
-\step 鸡脯肉上的一层白膜用刀剽去，用刀背捶成茸，边捶边用刀尖剔尽肉内细筋，再用
+\step 鸡脯肉上的一层白膜用刀片去，用刀背捶成茸，边捶边用刀尖剔尽肉内细筋，再用
 刀剁两次（使鸡脯剁成极细的茸）。猪肥膘用刀剁成细泥如油脂状。鸡蛋清及鸡茸倒在碗
 内，用竹筷使力向着一定方向不间歇地搅打十分钟，要搅散搅匀，直到把它滴一点在水面
 上不沉底为止。这时分五次加入清水一两，边加边搅。搅匀后再放入盐、水豆粉，再同样
