Add a note for DANSHUI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -248,6 +248,8 @@
 
 \recipelist{223,261}，“什锦”。《四》本《八》本作“什景”。径改。
 
+\recipelist{225,226}，“𥑲水”。盐卤。“𥑲”字疑误。
+
 \reciperef{228}。“四张豆腐皮一叠，如此再重四张，共为两叠。”“叠”，《四》本《八》
 本作“迭”。径改。“如此”，《四》本《八》本作“如果”。径改。
 
