Add note for recipe 217

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -243,6 +243,9 @@
 
 \reciperef{212}。“大拇指”，《四》本《八》本作“大姆指”。据《中》本改。
 
+\reciperef{217}。“再放入炒好的馅于萝卜腹内，用盖盖好……”\\%
+“用盖盖好”，《四》本《八》本作“用盖好”。径补。
+
 \recipelist{223,261}，“什锦”。《四》本《八》本作“什景”。径改。
 
 \reciperef{228}。“四张豆腐皮一叠，如此再重四张，共为两叠。”“叠”，《四》本《八》
