--- a/latex/recipe-033.tex
+++ b/latex/recipe-033.tex
@@ -53,7 +53,7 @@
 \step 菜心淘净，泹好；茨菰削皮；香菌洗净泥沙。
 
 \step 猪肉切成小豌豆大的丁，火腿、兰片、香菌、茨菰，分别切成细丁；葱切细花；姜
-去皮切细末。以上各材料加盐、酱油、水豆粉、鸡蛋（连黄）搅匀，共作成四个肉圆子，
+去皮切细末。以上各材料加盐、酱油、水豆粉、鸡蛋（连黄）搅匀，共做成四个肉圆子，
 略按扁。
 
 \step 油烧至七成热，肉圆煎成金黄色，捞起入碗，加姜、葱，搭汤上笼，蒸𤆵。
