--- a/latex/recipe-099.tex
+++ b/latex/recipe-099.tex
@@ -61,7 +61,7 @@
 清水中洗干净，滤干水份。
 
 \step 鲜豌豆仁用沸水煮熟去壳，漂在清水中，保持绿色。糯米淘洗后在沸水锅内煮透，
-以尚未成饭、米无硬心为度。莲米（退衣去心）、苡仁和芡实淘洗后用开水泡胀，装在碗
+以尚未成饭、米无硬心为度。莲米（退衣去芯）、苡仁和芡实淘洗后用开水泡胀，装在碗
 内，加清水泡浸，上笼蒸𤆵。金钩用沸汤泡胀，与香菌、火腿切成如豌豆大小的丁，然后
 将鲜豌豆仁、糯米、莲米、苡仁、芡实、金钩、香菌和火腿加盐拌匀，从鸡颈开口处装入
 腹内，装好后用削细的竹签（约五寸长）像缝衣似的将鸡颈开口处锁住（从外面看如同一
