--- a/latex/recipe-176.tex
+++ b/latex/recipe-176.tex
@@ -50,7 +50,7 @@
 \preparation
 
 \step 先将海参洗净，用汤汆过，捞起，同熟鸡肉、火腿、熟鸡蛋白切成大粗丝，分开装
-入盘内；再将晚香玉抽去花心，泹过捏干水分放入碗内；再用一个鸡蛋的蛋清同豆粉调成
+入盘内；再将晚香玉抽去花芯，泹过捏干水分放入碗内；再用一个鸡蛋的蛋清同豆粉调成
 蛋清豆粉，并将海参入蛋清豆粉拌匀待用。
 
 \step 锅放在火炉上倒下猪油，烧至八成火，将蛋清拌好的海参投入锅内，用竹筷滑散；
