--- a/latex/recipe-204.tex
+++ b/latex/recipe-204.tex
@@ -52,7 +52,7 @@
 入海碗，加酒米粉拌匀。
 
 \step 芝麻炕热搛碎；瓜砖、橘红、蜜樱桃、蜜枣均切成细颗；杏仁下油锅炸脆，捞起剁
-细；莲子去皮、去心，蒸𤆵，剁细；板油去皮，宰细，加白糖、玫瑰、化猪油、干豆粉，
+细；莲子去皮、去芯，蒸𤆵，剁细；板油去皮，宰细，加白糖、玫瑰、化猪油、干豆粉，
 同以上各料合拌成馅。
 
 \step 扯一小坨拌匀的苕泥巴，用手掌压扁填入心子，包成椭圆形如小鸡蛋，共二十四至
