--- a/latex/recipe-234.tex
+++ b/latex/recipe-234.tex
@@ -45,7 +45,7 @@
 
 \step 将锅置于旺火上烤热后，放入猪油二两，烧至冒烟即移于微火上（火上薄薄盖一层
 炭末，不要燃明火，以免把蛋烤糊），将搅好的鸡蛋倒入锅中，取碗一个扣在锅中鸡蛋
-上，再分次将猪油半两从锅的周边淋下，约烘十分钟，用竹签插入鸡蛋内提起验看，已干
+上。再分次将猪油半两从锅的周边淋下，约烘十分钟，用竹签插入鸡蛋内提起验看，已干
 即是烘好。然后将扣碗换圆盘复于锅中。滗去余油后，用汤瓢将烘蛋翻扣在盘中即成。
 
 \features
