--- a/latex/recipe-235.tex
+++ b/latex/recipe-235.tex
@@ -49,8 +49,8 @@
 \step 兔肉去头、爪，洗净后连骨宰成六分见方的丁颗，用盐、料酒（二钱）、姜片（四
 钱）、葱段（二钱）、酱油（五钱），将兔丁造匀，浸渍二十分钟取出。
 
-\step 菜油在旺火上烧红，将兔丁放入炸干水气捞起。干辣去籽，切成五分长的节子。陈
-皮切成小条方块。
+\step 菜油在旺火上烧红，将兔丁放入炸干水气捞起。干辣椒去籽，切成五分长的节子。
+陈皮切成小条方块。
 
 \step 菜油四两烧红，先将葱姜煵一下，加干辣椒、花椒、陈皮、酱油、白糖、清汤，将
 兔丁放入炒转，不要炒得太干，要有滋汁润气即起锅，将葱、姜拈去。吃时在辣椒中选兔
