--- a/latex/recipe-237.tex
+++ b/latex/recipe-237.tex
@@ -47,7 +47,7 @@
 
 \step 用刀尖先将田鸡腿去骨，洗净后，用料酒、盐拌和均匀后，加鸡蛋清豆粉拌匀。
 
-\step 茨菰削皮，淘净，切成头粗丝。鱼辣椒去籽，切成马耳朵。兰花抽心，去茎，用清
+\step 茨菰削皮，淘净，切成头粗丝。鱼辣椒去籽，切成马耳朵。兰花抽芯，去茎，用清
 水漂起。将料酒、盐、味精，加清汤、水豆粉少许，兑成滋汁。
 
 \step 锅在旺火上先烧红，猪油倒入浪转滗去，再换油烧至八成火，即将田鸡倒下，炒
