--- a/latex/recipe-238.tex
+++ b/latex/recipe-238.tex
@@ -45,7 +45,7 @@
 
 \preparation
 
-\step 兰花去茎抽心，火腿切成两寸长二粗丝三十根，每朵兰花内灌入一根，灌好备用。
+\step 兰花去茎抽芯，火腿切成两寸长二粗丝三十根，每朵兰花内灌入一根，灌好备用。
 
 \step 鸡脯肉用刀背捶茸，剔去筋缠，平均分成两份；先用一份加冷汤二两，兑起待用；
 鸡蛋清调散；干豆粉用冷水调匀，先倒入鸡茸内，用力搅匀搅稠；加肥膘肉再搅；再加盐、
