--- a/latex/recipe-238.tex
+++ b/latex/recipe-238.tex
@@ -48,8 +48,8 @@
 \step 兰花去茎抽芯，火腿切成两寸长二粗丝三十根，每朵兰花内灌入一根，灌好备用。
 
 \step 鸡脯肉用刀背捶茸，剔去筋缠，平均分成两份；先用一份加冷汤二两，兑起待用；
-鸡蛋清调散；干豆粉用冷水调匀，先倒入鸡茸内，用力搅匀搅稠；加肥膘肉再搅；再加盐、
-味精、胡椒面、料酒少许，再搅匀至不干不清时，即成“老糁”待用。
+鸡蛋清调散；干豆粉用冷水调匀，先倒入鸡茸内，用力搅匀搅稠；加肥膘肉再搅；再加
+盐、味精、胡椒面、料酒少许，再搅匀至不干不清时，即成“老糁”待用。
 
 \step 锅内清水烧沸，用手将灌好火腿的兰花，逐个在碗内蒙上一层老糁；蒙时露出花
 尖部分，边蒙边下入锅内，边浮起即边打捞入清水内漂起。
