--- a/latex/recipe-243.tex
+++ b/latex/recipe-243.tex
@@ -47,7 +47,7 @@
 \step 生银杏（白果）用钉锤轻轻敲碎，除去外壳，将银杏仁盛入大碗中，加水碱三、四
 滴拌匀；浸一、二分钟后再倒入开水一斤泡五分钟；滗去水，然后换温水加入银杏仁中，
 再一同倒入锅内。将锅放炉上，用干净竹刷把，把锅中的银杏仁戳去皮，再用手撕去余
-皮，抽去心，淘洗干净，用清水漂着待用。
+皮，抽去芯，淘洗干净，用清水漂着待用。
 
 \step 将猪油倒入锅中，上炉烧红，放入鸡块、肉块煸炒，加盐、胡椒面、特级奶汤烧
 开；再将去皮银杏仁放入汤中煨，煨至银杏仁呈现裂缝时捞出。
