--- a/latex/recipe-245.tex
+++ b/latex/recipe-245.tex
@@ -82,7 +82,7 @@
 \preparation
 
 猪肉片成三分厚的片。鸡蛋去壳与豆粉一起搅成蛋糊，抹于猪肉上。菜油入锅烧开，放入
-摸好蛋糊的猪肉，炸成蛋黄色时捞出，切成三分方丁，再入油中炸酥捞起即成。
+抹好蛋糊的猪肉，炸成蛋黄色时捞出，切成三分方丁，再入油中炸酥捞起即成。
 
 \end{subrecipe}
 }
