--- a/latex/recipe-042.tex
+++ b/latex/recipe-042.tex
@@ -48,7 +48,7 @@
 \step 用刀先将肚头的油筋片干净，平刀起成两层，斜刀𠟤成花子，再切成二粗丝，用水
 豆粉加盐、胡椒面、料酒码匀。
 
-\step 茨菰削皮，切成二粗丝；兰草花抽心，去茎，淘洗干净。分别漂入清水内。
+\step 茨菰削皮，切成二粗丝；兰草花抽芯，去茎，淘洗干净。分别漂入清水内。
 
 \step 清汤、水豆粉，加其余的盐、料酒、味精，兑成滋汁。
 
