--- a/latex/recipe-081.tex
+++ b/latex/recipe-081.tex
@@ -47,7 +47,7 @@
 \step 火腿剁为细末成“蒙子”。
 
 \step 鸡脯在墩子上用刀背反复砸茸，边砸边用刀口剔去白筋；鸡蛋清用筷子搅散，鸡茸
-在碗内用冷鸡汤解散，连同鸡蛋清加料酒、盐、胡椒面、味精、水豆粉，搅匀成鸡浆。
+在碗内用冷鸡汤澥散，连同鸡蛋清加料酒、盐、胡椒面、味精、水豆粉，搅匀成鸡浆。
 
 \step 炒锅在旺火上将油烧至八成火候，即将鸡浆倒入，用瓢子轻轻搅几转，再造动炒
 熟，入盘内，撒上火腿蒙子即成。
