--- a/latex/recipe-084.tex
+++ b/latex/recipe-084.tex
@@ -48,8 +48,8 @@
 
 \preparation
 
-\step 先将鸡脯肉清洗干净，在墩子上捶茸后放在碗内；用二两鸡汤解散，投入豆粉、味
-精、盐、料酒搅匀；将六个鸡蛋的蛋清投入解散的鸡茸内搅匀待用。
+\step 先将鸡脯肉清洗干净，在墩子上捶茸后放在碗内；用二两鸡汤澥散，投入豆粉、味
+精、盐、料酒搅匀；将六个鸡蛋的蛋清投入澥散的鸡茸内搅匀待用。
 
 \step 将锅放在旺火上，倒下化猪油，烧至六成热时滗去油，用汤瓢将搅好的鸡茸舀入油
 锅，摊成直径八寸、厚五厘的圆片，铲起放入盛有二汤的碗内；将鸡茸一直照样摊完（共
