--- a/latex/recipe-150.tex
+++ b/latex/recipe-150.tex
@@ -51,7 +51,7 @@
 \preparation
 
 \step 先将鲤鱼去头、皮、翅及内脏，清洗干净，将鱼肉及猪肥膘肉分别捶茸，分开放入
-碗内，用少许的清水将鱼茸及猪肉茸解散放入三个蛋的蛋清（蛋黄另作他用）、盐、味
+碗内，用少许的清水将鱼茸及猪肉茸澥散放入三个蛋的蛋清（蛋黄另作他用）、盐、味
 精，顺方向用力搅匀待用。
 
 \step 将锅放在旺火上放入猪油，烧至六成火，将搅好的鱼茸用调羹舀圆入锅内，炸泡成
