--- a/latex/recipe-151.tex
+++ b/latex/recipe-151.tex
@@ -60,7 +60,7 @@
 椒、料酒，入笼内大火蒸十五分钟馏起。
 
 \step 将鸡脯肉洗净，放在墩子上捶茸；再将锅放在旺火上，倒入特级清汤，用少许清水
-将鸡茸解散，投入汤内，微转数下，汤至微开，肉沫浮起，打尽杂质及肉沬；再取出笼内
+将鸡茸澥散，投入汤内，微转数下，汤至微开，肉沫浮起，打尽杂质及肉沬；再取出笼内
 的鱼，去掉姜、葱、花椒，将锅内的清汤灌入盛鱼的盘中，走菜时随上一个姜醋碟子即
 成。
 
