--- a/latex/recipe-178.tex
+++ b/latex/recipe-178.tex
@@ -49,7 +49,7 @@
 小时取出，用好汤加料酒、盐少许在锅内汆两次，用汤煨起待用。
 
 \step 火腿剁成细末。鸡脯用刀背砸茸，砸时用刀口剔去皮筋。蛋清用筷子搅散。用清水
-将鸡茸解散后，加入蛋清、料酒、盐、胡椒、味精、水豆粉，搅匀成“鸡浆”。
+将鸡茸澥散后，加入蛋清、料酒、盐、胡椒、味精、水豆粉，搅匀成“鸡浆”。
 
 \step 猪油用旺火烧至八成热，即将“鸡浆”临时加鸡汤兑匀倒入，用瓢子轻轻搅推几转，
 炒熟成鸡淖；先舀一半入走菜盘中。将煨起的鱼翅换汤再煨一次，滤去水，倒入锅中，与
