--- a/latex/recipe-184.tex
+++ b/latex/recipe-184.tex
@@ -50,7 +50,7 @@
 \step 先将炸过的鱼肚用温水泡胀，除尽油腻；改成二寸长、一寸宽、一分五厚的片子
 （剩余的边角另作他用），放在盘内，用二汤煨起；再将菠菜杆泹后晾凉（大杆撕破），
 切成一寸二长的二粗丝；火腿也照样切好；又将肥膘、鱼肉及蛋清豆粉打成“糁”；将猪痩
-肉捶茸，用少量清水解散，分开放入碗内待用。
+肉捶茸，用少量清水澥散，分开放入碗内待用。
 
 \step 其余的蛋清及豆粉拌成蛋清豆粉，将煨好的鱼肚用手挤干水份平铺于案上，抹上蛋
 清豆粉；将打好的糁，用筷子或竹片均匀地刮在二十四片鱼肚上；再将切好的菠菜杆、火
