--- a/latex/recipe-247.tex
+++ b/latex/recipe-247.tex
@@ -55,8 +55,8 @@
 根同样放完，再打破鸽蛋，逐一放在调羹内，将丝的一头压着，上笼蒸五分钟即熟。取出
 调羹内的鸽蛋，装入一个碗内用清汤漂起。
 
-\step 炒锅放于旺火上，放入一斤半清汤、料酒、盐，再将捶好的猪瘦肉茸子用清水解
-散，倒入锅内用汤瓢推动数转，肉沫浮起打尽；再将鸡脯肉用清水解散倒入锅内，肉沫浮
+\step 炒锅放于旺火上，放入一斤半清汤、料酒、盐，再将捶好的猪瘦肉茸子用清水澥
+散，倒入锅内用汤瓢推动数转，肉沫浮起打尽；再将鸡脯肉用清水澥散倒入锅内，肉沫浮
 起打尽杂质。装鸽蛋的碗滗去清汤，再用清汤过一次，翻入大碗内，放入味精，将锅内的
 清汤倒入鸽蛋碗内即成。
 
