--- a/latex/recipe-252.tex
+++ b/latex/recipe-252.tex
@@ -55,7 +55,7 @@
 \step 将蹄筋碗内的冷水滗去，再用开水烫后滗去，用二汤过一次；并将鸽蛋烫热，将蹄
 筋放入大海碗内，鸽蛋镶于周围。
 
-\step 将锅放于旺火上，倒入好鸡汤，烧至微开，再将鸡脯茸用清水解散倒入锅内，肉沫
+\step 将锅放于旺火上，倒入好鸡汤，烧至微开，再将鸡脯茸用清水澥散倒入锅内，肉沫
 浮起，打尽杂质，再放下味精、胡椒、料酒，烧开后，倒入装蹄筋的大海碗内即成。
 
 \features
