--- a/latex/recipe-263.tex
+++ b/latex/recipe-263.tex
@@ -66,7 +66,7 @@
 形，约一寸五长，放于抹豆粉处，二十四个照样摆完。再用铁夹将丝瓜火腿、蛋皮丝各夹
 一丝入糁的中心，夹二根单丝插入糁的前面，放二粒芝麻在糁的上边，二十四个一起做完
 即为蝴蝶竹荪。上笼蒸五分钟即熟（用时馏热）。鸡脯肉、猪瘦肉分别捶成茸子，并用清
-水解散，装入碗内。
+水澥散，装入碗内。
 
 \step 将锅放在旺火上，倒下一斤半清汤加酱油、胡椒、盐，烧开后投入红茸子，推动数
 转，微开时打尽肉沫；再投入白茸子，推动数转，微开时，同样打尽肉末，无杂质时，放
