--- a/latex/recipe-162.tex
+++ b/latex/recipe-162.tex
@@ -35,7 +35,7 @@
 \ingredient{猪肥膘肉}{二两}
 \ingredient{鸡蛋}{三个}
 \ingredient{芝麻}{三两}
-\ingredient{土司}{半磅}
+\ingredient{吐司}{半磅}
 \ingredient{盐}{三分}
 \ingredient{味精}{一分}
 \ingredient{胡椒面}{一分}
@@ -51,11 +51,11 @@
 \preparation
 
 \step 虾仁、肥膘肉、鸡蛋清、盐、味精、胡椒面、水豆粉合搅成“糁”；芝麻用水淘净，
-晾干水气；土司切成直径一寸、厚二分的片二十四片；鸡蛋合干豆粉搅成蛋清豆粉；生菜
+晾干水气；吐司切成直径一寸、厚二分的片二十四片；鸡蛋合干豆粉搅成蛋清豆粉；生菜
 淘洗干净待用。
 
-\step 土司二十四片平铺在案板上分别抹上蛋清豆粉，将糁分别糊上，再撒上芝麻，用手
-拍好；将土司粘有芝麻的一面向下，投入五成热的油锅内炸；至呈金黄色时捞起，放入浅
+\step 吐司二十四片平铺在案板上分别抹上蛋清豆粉，将糁分别糊上，再撒上芝麻，用手
+拍好；将吐司粘有芝麻的一面向下，投入五成热的油锅内炸；至呈金黄色时捞起，放入浅
 色的条盘的一端；另一端镶上用白糖、醋、香油拌好的生菜即成。
 
 \features
