--- a/latex/recipe-248.tex
+++ b/latex/recipe-248.tex
@@ -32,7 +32,7 @@
 \ingredients
 
 \ingredient{鸽蛋}{十二个}
-\ingredient{土司}{一磅}
+\ingredient{吐司}{一磅}
 \ingredient{鸡脯肉}{一两五}
 \ingredient{肥膘}{一两}
 \ingredient{鸡蛋}{二个}
@@ -52,11 +52,11 @@
 等。鸡蛋二个摊成蛋皮，连同丝瓜皮、火腿各修切成小瓜子片、鱼眼睛片，各七十二片待
 用。
 
-\step 土司切成一寸二宽、一寸八长、一分五厚的棋子块二十四片。鸡脯、肥膘、蛋清等
-搅成“鸡糁”。每片土司上先涂上一层鸡糁，约二分厚；再将半边鸽蛋嵌在中间，紧挨鸽蛋
+\step 吐司切成一寸二宽、一寸八长、一分五厚的棋子块二十四片。鸡脯、肥膘、蛋清等
+搅成“鸡糁”。每片吐司上先涂上一层鸡糁，约二分厚；再将半边鸽蛋嵌在中间，紧挨鸽蛋
 的周围点缀小瓜子片和鱼眼睛片，增加美观，上笼汽五分钟成半制成品取下。
 
-\step 化猪油在旺火上烧至六成热时，即将蒸好的半制成品取出，鸽蛋向下，土司向上放
+\step 化猪油在旺火上烧至六成热时，即将蒸好的半制成品取出，鸽蛋向下，吐司向上放
 入油锅内炸；炸时用小铲细心翻动，呈金黄色时即捞起在盘中摆好，两端镶上生菜即成。
 
 \features
