--- a/latex/recipe-256.tex
+++ b/latex/recipe-256.tex
@@ -27,11 +27,11 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{五彩土司}
+\begin{recipe}{五彩吐司}
 
 \ingredients
 
-\ingredient{土司}{一磅}
+\ingredient{吐司}{一磅}
 \ingredient{鲜鱼肉}{八两}
 \ingredient{猪肥膘}{二两}
 \ingredient{鸡蛋}{五个}
@@ -54,11 +54,11 @@
 \step 鲜鱼剔骨，去皮，选净细刺后，与肥膘分别用刀背砸茸搅成“鱼糁”。摊蛋皮一
 张，连同火腿、木耳、绿色小菜分别切成各种细末，连芝麻共成五种细末各分装一边。
 
-\step 土司修去周围的皮后，切成二分厚的片，先在一面抹上一层“蛋清豆粉”再放上“鱼
+\step 吐司修去周围的皮后，切成二分厚的片，先在一面抹上一层“蛋清豆粉”再放上“鱼
 糁”约三分厚抹平，再将五种细末一样样摊开在墩子上，分颜色用刀口刮成一字条形，顺
 着贴在“糁”上约一分厚，用手按平不脱，自成五色，每片同样贴好，上笼蒸五分钟取出。
 
-\step 锅内掺油在旺火上烧至七成火，将土司放入，贴细末一面向上，炸成金黄色，将油
+\step 锅内掺油在旺火上烧至七成火，将吐司放入，贴细末一面向上，炸成金黄色，将油
 滗尽，淋上香油搛起；再用刀改成五分宽、一寸二长的条子（切时按五色切开使每片都现
 彩色），装在条盘的一端，另一端放生菜。走菜时随椒盐一碟同上。
 
