--- a/latex/recipe-257.tex
+++ b/latex/recipe-257.tex
@@ -27,11 +27,11 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{兰花土司}
+\begin{recipe}{兰花吐司}
 
 \ingredients
 
-\ingredient{土司}{一磅}
+\ingredient{吐司}{一磅}
 \ingredient{肥膘}{二两}
 \ingredient{鸡蛋清}{四个}
 \ingredient{𬂁肝}{四个}
@@ -48,14 +48,14 @@
 
 \preparation
 
-\step 土司切成三分厚片子（共四片），鲜鱼打成“鱼糁”，每个土司片上先抹蛋清豆粉，
+\step 吐司切成三分厚片子（共四片），鲜鱼打成“鱼糁”，每个吐司片上先抹蛋清豆粉，
 再涂上鱼糁，用手抹平整。
 
 \step 𬂁肝四个去掉两面皮子，每个𠟤为六个鸡冠花的形式（共二十四个），用盐、料酒
-少许，抹匀后分别插在土司上（每片六个分两边插），上笼蒸五分钟取出晾冷，每片土司
+少许，抹匀后分别插在吐司上（每片六个分两边插），上笼蒸五分钟取出晾冷，每片吐司
 再开为六片待用。
 
-\step 菜油在旺火上烧至七成火候，将土司倒入锅内炸至浅黄色，将油滗去，淋上香油，
+\step 菜油在旺火上烧至七成火候，将吐司倒入锅内炸至浅黄色，将油滗去，淋上香油，
 簸匀起锅入盘。
 
 \step 白糖、香油、葱白、甜酱，兑成葱酱，镶入盘另一端入席。
