--- a/latex/recipe-258.tex
+++ b/latex/recipe-258.tex
@@ -27,11 +27,11 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{杏圆土司}
+\begin{recipe}{杏圆吐司}
 
 \ingredients
 
-\ingredient{土司}{一磅}
+\ingredient{吐司}{一磅}
 \ingredient{鸡蛋}{四个}
 \ingredient{净鲜鱼肉}{四两}
 \ingredient{猪肥膘肉}{二两}
@@ -47,18 +47,18 @@
 
 \preparation
 
-\step 土司切成一分半厚的大片，再将大片改成八分见方的小片，共切三十片，修去四角
+\step 吐司切成一分半厚的大片，再将大片改成八分见方的小片，共切三十片，修去四角
 成八分过心的圆形，放入盘内待用。
 
 \step 将鲜鱼肉、猪肥膘分别捶茸，加鸡蛋清、盐、水豆粉打成“鱼糁”放在碗内待用。
 
-\step 每一片土司上均匀地放上二分厚的鱼糁，用手刮边沿成中心高边沿低的形式，一直
+\step 每一片吐司上均匀地放上二分厚的鱼糁，用手刮边沿成中心高边沿低的形式，一直
 做完三十片。
 
-\step 将锅置于旺火，倒入化猪油，烧至四成火，再一个个地放下土司（糁向上，土司向
-下），由低温到高温，土司的颜色接近黄色（形色同杏圆相似），滗去锅内炸油，淋入香
+\step 将锅置于旺火，倒入化猪油，烧至四成火，再一个个地放下吐司（糁向上，吐司向
+下），由低温到高温，吐司的颜色接近黄色（形色同杏圆相似），滗去锅内炸油，淋入香
 油，起锅入条盘的一端。再将生菜淘洗干净，滤干水份，拌入糖、醋、香油、味精，放在
-杏圆土司的另一端即成。
+杏圆吐司的另一端即成。
 
 \features
 
