Add a note for toast

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -221,6 +221,9 @@
 \recipelist{157,173,178,182,183,184,185,193,263}，“煨”。《四》本《八》本作
 “喂”。径改。
 
+\recipelist{162,248,256,257,258}，“吐司”。《四》本《八》本作“土司”。径改。“吐
+司”，烤面包片。［英~toast］
+
 \reciperef{163}。“鲜虾仁”，《四》本《八》本“鲜”前衍一“尽”字。径删。
 
 \reciperef{169}。“蜇”，《八》本作“蛰”。误。
