Fix JIAO and XIANG

--- a/latex/recipe-250.tex
+++ b/latex/recipe-250.tex
@@ -61,7 +61,7 @@
 猪尾捞起。
 
 \step 鸽蛋用清水煮好，去壳，在油锅内跑一次。再将猪尾、蹄筋捞起定碗，定碗的形式
-是先用鸽蛋三个在碗底中心，摆成三方形，每一个空间相一节猪尾，周围再围一转蹄筋，
+是先用鸽蛋三个在碗底中心，摆成三角形，每一个空间镶一节猪尾，周围再围一转蹄筋，
 外面围猪尾，猪尾外又是鸽蛋，其余的作为底子，底内再放入茨菰形的青笋，青笋上面放
 一两生鸡油，再掺入二两包罐内的原汁上笼蒸，蒸至青笋已𤆵即取出，翻入大圆盘内，再
 将罐内的原汁滤过收成浓汁淋于盘内即成。
