--- a/latex/recipe-262.tex
+++ b/latex/recipe-262.tex
@@ -70,7 +70,7 @@
 \step 姜一钱去皮，切成细末；葱切成葱花；与胡椒、味精共摆一碟，每样占碟的四分之
 一。另以小碟盛盐备用。
 
-\step 鲜菊花一大朵（最好为自色），用刀切去花蒂，抽出花蕊，仍以菊花原形放入盘
+\step 鲜菊花一大朵（最好为白色），用刀切去花蒂，抽出花蕊，仍以菊花原形放入盘
 中。
 
 \step 锅置火上，放入猪油，加入姜（拍松）、葱切成五分长的短节，随即放入奶汤和鱼
