Add Ideographic Comma

--- a/latex/recipe-263.tex
+++ b/latex/recipe-263.tex
@@ -58,9 +58,9 @@
 
 \step 鸡蛋摊成蛋皮；鲜笋煮熟放在碗内；丝瓜刮后车下皮，洗净，切成二寸长的段，用
 沸水泹熟，用清水漂起；再将丝瓜皮、蛋皮、鲜笋、火腿切成二寸长的二粗丝，分开装入
-盘内。黑芝麻淘洗干净，捞起；半个蛋清拌成蛋清豆粉；鲜鱼肉去净皮翅，用刀背反复捶
-茸（肉内不见籽为准）；肥膘剁细（如油脂）。再将鱼茸放入瓢内，三个半蛋清，八钱清
-水，三分盐、剁好的肥膘茸及水发湿的干豆粉打成“鱼糁”装入碗内待用。
+盘内。黑芝麻淘洗干净，捞起；半个蛋清拌成蛋清豆粉；鲜鱼肉去净皮、翅，用刀背反复
+捶茸（肉内不见籽为准）；肥膘剁细（如油脂）。再将鱼茸放入瓢内，三个半蛋清，八钱
+清水，三分盐、剁好的肥膘茸及水发湿的干豆粉打成“鱼糁”装入碗内待用。
 
 \step 将修去边角的竹荪摆成蝴蝶形，中间抹上蛋清豆粉，再将鱼糁刮于手心上呈尖刀
 形，约一寸五长，放于抹豆粉处，二十四个照样摆完。再用铁夹将丝瓜火腿、蛋皮丝各夹
