Add Ideographic Comma

--- a/latex/recipe-263.tex
+++ b/latex/recipe-263.tex
@@ -63,10 +63,10 @@
 清水，三分盐、剁好的肥膘茸及水发湿的干豆粉打成“鱼糁”装入碗内待用。
 
 \step 将修去边角的竹荪摆成蝴蝶形，中间抹上蛋清豆粉，再将鱼糁刮于手心上呈尖刀
-形，约一寸五长，放于抹豆粉处，二十四个照样摆完。再用铁夹将丝瓜火腿、蛋皮丝各夹
-一丝入糁的中心，夹二根单丝插入糁的前面，放二粒芝麻在糁的上边，二十四个一起做完
-即为蝴蝶竹荪。上笼蒸五分钟即熟（用时馏热）。鸡脯肉、猪瘦肉分别捶成茸子，并用清
-水澥散，装入碗内。
+形，约一寸五长，放于抹豆粉处，二十四个照样摆完。再用铁夹将丝瓜、火腿、蛋皮丝各
+夹一丝入糁的中心，夹二根单丝插入糁的前面，放二粒芝麻在糁的上边，二十四个一起做
+完即为蝴蝶竹荪。上笼蒸五分钟即熟（用时馏热）。鸡脯肉、猪瘦肉分别捶成茸子，并用
+清水澥散，装入碗内。
 
 \step 将锅放在旺火上，倒下一斤半清汤加酱油、胡椒、盐，烧开后投入红茸子，推动数
 转，微开时打尽肉沫；再投入白茸子，推动数转，微开时，同样打尽肉末，无杂质时，放
