--- a/latex/recipe-263.tex
+++ b/latex/recipe-263.tex
@@ -69,7 +69,7 @@
 清水澥散，装入碗内。
 
 \step 将锅放在旺火上，倒下一斤半清汤加酱油、胡椒、盐，烧开后投入红茸子，推动数
-转，微开时打尽肉沫；再投入白茸子，推动数转，微开时，同样打尽肉末，无杂质时，放
+转，微开时打尽肉沫；再投入白茸子，推动数转，微开时，同样打尽肉沫，无杂质时，放
 下味精，取出笼内的蝴蝶竹荪，用清汤过一次，翻入大汤盘内，再将锅内的清汤灌入即
 成。
 
