--- a/latex/recipe-269.tex
+++ b/latex/recipe-269.tex
@@ -44,9 +44,9 @@
 
 竹荪以淘米水发胀后，轻轻搓几下漂入清水内。
 
-鸡肝洗净以刀背捶绒，将蛋白搅散掺入鸡肝内，并加入胡椒、食盐和鸡汤一杓，合拌调匀。
-以丝罗筛滤渣取汁，连续滤三次，然后将肝汁盛在碗内，蒸约十分钟即凝结成膏。蒸时火
-力要适度，火大则会起蜂窝眼，火小则引起沉淀，不能凝结。
+鸡肝洗净以刀背捶绒，将蛋白搅散掺入鸡肝内，并加入胡椒、食盐和鸡汤一杓，合拌调
+匀。以丝箩筛滤渣取汁，连续滤三次，然后将肝汁盛在碗内，蒸约十分钟即凝结成膏。蒸
+时火力要适度，火大则会起蜂窝眼，火小则引起沉淀，不能凝结。
 
 鸡汤五杓装在小铝锅内，在微火上烧沸，将浮油打起不要。将瘦猪肉用刀背捶绒，以冷汤
 调散倾入鸡汤内，并加进绍酒用杓搅转，俟汤再沸时用漏杓将沉渣捞起不要。再将鸡脯肉
