--- a/latex/recipe-269.tex
+++ b/latex/recipe-269.tex
@@ -33,6 +33,7 @@
 
 \ingredient{竹荪}{二钱}
 \ingredient{瘦猪肉}{二两五}
+\ingredient{鸡肝（以母鸡黄沙肝最好）}{四两}
 \ingredient{鸡脯肉}{四两}
 \ingredient{母鸡汤}{六杓}
 \ingredient{鸡蛋（取白）}{二个}
