--- a/latex/recipe-302.tex
+++ b/latex/recipe-302.tex
@@ -50,7 +50,7 @@
 
 \preparation
 
-将鸡肉切成八分见方的块，冬笋、冬菇、火腿切成八分长的筷子条。干豆粉用罗筛去其粗
+将鸡肉切成八分见方的块，冬笋、冬菇、火腿切成八分长的筷子条。干豆粉用箩筛去其粗
 粒，把一部分撒在菜墩上，将鸡肉摆在上面，鸡肉之上又撒以豆粉，用刀背将鸡肉轻捶使
 之松软后，抖去尚未粘牢的豆粉，摆放一旁待用。
 
