--- a/latex/recipe-276.tex
+++ b/latex/recipe-276.tex
@@ -43,13 +43,12 @@
 
 \preparation
 
-鸡去头脚，洗干净，晾干水气，里外均匀地抹上食盐，
-
-胸部因肉厚要适当多抹。隔约半天，把姜拍碎，葱子打成小结子，连同花椒放在鸡腹内，
-鸡的皮面以醪糟水抹上，用碗盛起，上笼蒸约二小时，蒸到软和时为度。在蒸的过程中，
-每隔二三十分钟须刷麻油一次。鸡蒸好，取出时将红酱油刷在皮面上，使颜色美观，然后
-用鲜柏树枝和少许茶叶燃起的烟子熏约半小时去掉腹内的姜、葱、花椒等，砍成约八分长
-的斜方形小块，按鸡形盛于盘内即成。
+鸡去头脚，洗干净，晾干水气，里外均匀地抹上食盐，胸部因肉厚要适当多抹。隔约半
+天，把姜拍碎，葱子打成小结子，连同花椒放在鸡腹内，鸡的皮面以醪糟水抹上，用碗盛
+起，上笼蒸约二小时，蒸到软和时为度。在蒸的过程中，每隔二、三十分钟须刷麻油一
+次。鸡蒸好，取出时将红酱油刷在皮面上，使颜色美观，然后用鲜柏树枝和少许茶叶燃起
+的烟子熏约半小时。去掉腹内的姜、葱、花椒等，砍成约八分长的斜方形小块，按鸡形盛
+于盘内即成。
 
 \features
 
