--- a/latex/recipe-292.tex
+++ b/latex/recipe-292.tex
@@ -34,8 +34,8 @@
 \ingredient{莴笋头、胡萝卜、白萝卜}{各二两五}
 \ingredient{净冬笋}{二两}
 \ingredient{洋芋}{四两}
-{\kafamily\null\hspace{4em}（以上各菜均切成约一指半宽的片子，并\\
- \null\hspace{5em}刻成各式花形）\\}
+{\kafamily\null\hspace{4em}（以上各菜均切成约一指半宽的片子，\\
+ \null\hspace{5em}并刻成各式花形）\\}
 \ingredient{莴笋尖（去边叶）}{五两}
 \ingredient{瓢儿白（取心）}{五两}
 \ingredient{黄秧白（取心）}{五两}
