--- a/latex/recipe-111.tex
+++ b/latex/recipe-111.tex
@@ -56,12 +56,12 @@
 松，葱挽成结待用。
 
 \step 用大鱼碗一个，铺上清洗干净的纱布，将火腿、兰片、口蘑摆成“三叠水”，把炸好
-的鸭子以鸭脯向下挨着摆好的火腿等放好，即将纱布对角抄拢包起打成结，提入罆子内
-（罆内先垫好鸡、鸭骨）。
+的鸭子以鸭脯向下挨着摆好的火腿等放好，即将纱布对角抄拢包起打成结，提入罐子内
+（罐内先垫好鸡、鸭骨）。
 
-\step 将白糖汁、盐、酱油、姜、葱、料酒（抹后剩下的）和清汤分别加入罆内盖上盖
+\step 将白糖汁、盐、酱油、姜、葱、料酒（抹后剩下的）和清汤分别加入罐内盖上盖
 子，在武火上烧二十分钟，改用文火，继续烧至十分火候，骨松肉𤆵时，将鸭子提起解开
-纱布结，翻入圆盘，揭去纱布，将罆内滋汁倒入炒锅内收浓，加味精，提锅离火口，再加
+纱布结，翻入圆盘，揭去纱布，将罐内滋汁倒入炒锅内收浓，加味精，提锅离火口，再加
 香油淋于鸭子上即成。
 
 \features
