--- a/latex/recipe-295.tex
+++ b/latex/recipe-295.tex
@@ -44,7 +44,7 @@
 
 \preparation
 
-将猪头的毛去尽，刮洗干净，在锅内煮到七分火色，以刀切成寸多长的方形块子，置罆或
+将猪头的毛去尽，刮洗干净，在锅内煮到七分火色，以刀切成寸多长的方形块子，置罐或
 铝锅中，加清水约二中碗，将冰糖炒化和绍酒、花椒、老姜、大葱、食盐一齐放下，用武
 火烧开后，以文火烘约二小时半，到软如豆腐状时为止。将肉放在碗内，放时有皮的一面
 向碗底，用漏瓢去掉汤内的花椒、老姜、大葱等，把原汁淋在肉上，并放在蒸笼里去蒸。
