--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -192,6 +192,8 @@
 
 \reciperef{106}。“锅内掺清汤”。“掺”，《四》本《八》本作“渗”。径改。
 
+\recipelist{111,295}，“罐”。《四》本作“罆”。据《八》本改。
+
 \recipelist{120,121,123,223,257,262}，“𬂁”。“肫”之异体字。鸟类的胃。
 
 \recipelist{120,129,130,131,132,133,134,135,136,137}等多篇，“鳃”。各本皆作
