--- a/latex/recipe-303.tex
+++ b/latex/recipe-303.tex
@@ -54,7 +54,7 @@
 精、清汤及酱油二钱，水豆粉一钱半，同入碗中兑成汁子。
 
 锅烧热后，放下猪油，随下鸡肉和冬笋，炒到水气将干时，放入豆瓣、辣酱、姜，再稍炒
-后，即加进芹菜倾下已兑好的汁子，翻炒几下即可起锅。
+后，即加进芹菜，倾下已兑好的汁子，翻炒几下即可起锅。
 
 \features
 
