Use \xeCJKnobreak{} to manually squeeze one line on page 138 and 139

--- a/latex/recipe-134.tex
+++ b/latex/recipe-134.tex
@@ -55,7 +55,7 @@
 上，网油抄拢，放花椒（数粒）、葱子、姜（拍松），上笼干蒸十五分钟。
 
 \step 芹菜去叶留茎，连同葱子切成细花；大蒜、豆豉分别研成细泥；芽菜剁成末；剩余
-的花椒与菜油在锅内制成花椒油。
+的花椒与菜油在锅内制成花\xeCJKnobreak{}椒油。
 
 \step 油辣椒、豆豉、香油、酱油、蒜泥、芽菜末、葱花、芹菜花、花椒油、味精等在碗
 内兑成调料。
