--- a/latex/recipe-138.tex
+++ b/latex/recipe-138.tex
@@ -51,10 +51,10 @@
 
 \preparation
 
-\step 鱼剖腹、去脏、去鳞、挖鳃、洗净，用净布沾干水气，鱼身两面各划数刀。火腿切
-成长一寸、宽五分、厚一分的片；鸡皮切成长一寸、宽五分的片；口蘑切成大的三片、小
-的对剖；金钩用温水淘洗干净；葱切成一寸长的节；鲜笋去壳，取嫩颠，切成长一寸、宽
-五分、厚一分的片；姜刮洗干净，拍破。
+\step 鱼剖腹、去脏、去鳞、挖鳃、洗净，用净布沾干水气，\xeCJKnobreak{}鱼身两面
+各划数刀。火腿切成长一寸、宽五分、厚一分的片；鸡皮切成长一寸、宽五分的片；口蘑
+切成大的三片、小的对剖；金钩用温水淘洗干净；葱切成一寸长的节；鲜笋去壳，取嫩
+颠，切成长一寸、宽五分、厚一分的片；姜刮洗干净，拍破。
 
 \step 将鱼投入油锅中稍炸捞起，滗去炸油留油二两，姜、葱下锅微煵一下，烹入清汤，
 即将火腿、鸡皮、口蘑、鲜笋放入，加料酒，投下鱼，并加胡椒、白糖、盐，在小火上烧
