Manually squeeze paragraph to save one line space

--- a/latex/recipe-144.tex
+++ b/latex/recipe-144.tex
@@ -63,8 +63,8 @@
 \step 酱油、白糖、醋、味精、水豆粉、料酒、清汤先兑成滋汁一碗。
 
 \step 旺火将油烧热；先将笋、菌、火腿等丝煸一下，连续下姜、蒜丝和部分葱丝、泡辣
-椒丝，即将兑好的滋汁勾匀入锅，加香油成糖醋汁，淋于蒸好的鱼上，再撒辣椒丝、葱丝
-即成。
+椒丝，即将兑好的滋汁勾匀入锅，加香油成糖醋汁，淋于蒸好的鱼上，再撒辣椒丝、葱
+丝\xeCJKnobreak{}即成。
 
 \features
 
