Adjust vertical space manually

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -327,6 +327,7 @@
 \input{recipe-146.tex}
 \input{recipe-147.tex}
 \input{recipe-148.tex}
+\vspace{1\baselineskip}
 \input{recipe-149.tex}
 \pagebreak
 \input{recipe-150.tex}
