--- a/latex/recipe-127.tex
+++ b/latex/recipe-127.tex
@@ -49,7 +49,7 @@
 \preparation
 
 \step 鱼肉洗净，用刀片成一寸五长、八分宽、半分厚的片，用清水漂后捞起，滤干水气，
-先用盐、胡椒面料酒造匀，再加鸡蛋清豆粉；兰花抽心，去茎；茨菰削皮切成薄片。
+先用盐、胡椒面料酒造匀，再加鸡蛋清豆粉；兰花抽芯，去茎；茨菰削皮切成薄片。
 
 \step 料酒、白糖、味精、盐、酱油、醋、清汤加水豆粉少许兑成滋汁。
 
