--- a/latex/recipe-142.tex
+++ b/latex/recipe-142.tex
@@ -50,8 +50,8 @@
 
 \preparation
 
-\step 猪肉选用五花的，洗净切成块；鸡翅膀切去翅尖砍为两段；猪肉与鸡翅一同用沸水
-在锅内汆五分钟，除尽浮沫后捞出。将锅置于旺火上，放入猪油和一块拍松的姜、葱白
+\step 猪肉选用五花的，洗净切成块；鸡翅膀切去翅尖，砍为两段；猪肉与鸡翅一同用沸
+水在锅内汆五分钟，除尽浮沫后捞出。将锅置于旺火上，放入猪油和一块拍松的姜、葱白
 段，再放入猪肉、鸡翅，一并煸四、五分钟，加红、白酱油和盐，再烹入料酒，加入鸡汤
 烧沸，倒入砂锅盖好，放在偏火眼上，焅着即为老汤。净大蒜装盘上笼蒸𤆵。
 
