--- a/latex/recipe-230.tex
+++ b/latex/recipe-230.tex
@@ -51,7 +51,7 @@
 \step 猪肥膘肉在汤锅内煮八分熟，捞出晾冷，切成一寸二长、一寸宽、一分厚的片二十
 四片，用刀尖在每片的四角及中心轻轻划穿（这样贴时肉片才不会卷起）。生豆腐放入丝
 箩内搅散、滤去渣，取豆腐汁装入碗内。鸡蛋清用竹筷在八寸盘内用力向着一个方向快速
-搅打，搅打至全部变为雪白成团的细泡，将筷子一支插入细泡内不倒时为止。推盐、干豆
+搅打，搅打至全部变为雪白成团的细泡，将筷子一支插入细泡内不倒时为止。把盐、干豆
 粉、面粉、味精和鸡蛋泡都加入豆腐汁的碗内，搅匀后再加入化猪油搅匀，成为“豆腐
 糁”。用鸡蛋清与干豆粉调成蛋清豆粉。
 
