--- a/latex/recipe-230.tex
+++ b/latex/recipe-230.tex
@@ -57,9 +57,9 @@
 
 \step 熟肥猪肉片二十四片分开摊在盘内，用拧干的热布帕把油沾干，将每个肉片上抹上
 一层蛋清豆粉；再用调羹将豆腐糁舀在上面，平摊约三分厚（四边稍薄，贴时才不会
-流）。鸡蛋黄（三个）搅散，入猪油抹过的炒锅内（用猪油很少，使蛋不巴锅即可），于
-旺火上摊成蛋皮。蛋皮及痩火腿先各切成细丝，再切成细末，按在摊好的豆腐糁上，每片
-放上火腿及蛋皮末各一半，然后在盘内摆好，上笼蒸约五分钟即熟，取出。
+流）。鸡蛋黄（三个）搅散，倒入猪油抹过的炒锅内（用猪油很少，使蛋不巴锅即可），
+于旺火上摊成蛋皮。蛋皮及痩火腿先各切成细丝，再切成细末，按在摊好的豆腐糁上，每
+片放上火腿及蛋皮末各一半，然后在盘内摆好，上笼蒸约五分钟即熟，取出。
 
 \step 炒锅放在旺火上烧至七成热，倒入猪油将锅转动，使锅内粘上一层油，即滗去油，
 随将蒸好的豆腐（肥肉片向下）逐个贴在锅内约煎八分钟。煎时将锅左右前后移动，以免
