--- a/latex/recipe-238.tex
+++ b/latex/recipe-238.tex
@@ -37,7 +37,7 @@
 \ingredient{兰花}{三十件}
 \ingredient{盐}{五分}
 \ingredient{料酒}{二钱}
-\ingredient{蜂精}{三分}
+\ingredient{味精}{三分}
 \ingredient{胡椒面}{二分}
 \ingredient{特级清汤}{一斤半}
 \ingredient{熟火腿}{二两}
