Add note for PIAOERBAI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -285,7 +285,9 @@
 
 \reciperef{273}。各本标题皆作“汗蒸鱼”。径改。
 
-\reciperef{292}。“莴笋”，《四》本《八》本作“窝笋”。径改。
+\reciperef{292}。“莴笋”，《四》本《八》本作“窝笋”。径改。\\%
+“瓢儿白”，上海白菜。又叫上海青、苏州青、青江菜、小棠菜、青梗白菜、青江白菜、
+汤匙菜等。
 
 \recipelist{303,307}。“仔公鸡”，《四》本《八》本作“子公鸡”。径改。
 
