Fix command \stroke

--- a/latex/stroke.tex
+++ b/latex/stroke.tex
@@ -1,4 +1,4 @@
-\providecommand*\stroke[1]{
+\providecommand*\stroke[1]{%
 	\ifthenelse{\equal{#1}{A}}{一画}{%
 	\ifthenelse{\equal{#1}{B}}{二画}{%
 	\ifthenelse{\equal{#1}{C}}{三画}{%
