--- a/latex/recipe-180.tex
+++ b/latex/recipe-180.tex
@@ -42,12 +42,12 @@
 \ingredient{胡椒}{二分}
 \ingredient{鸡脯茸子}{四两}
 \ingredient{料酒}{二两}
-\ingredient{代丝}{（发胀要六寸的三十根约一两）}
+\ingredient{带丝}{（发胀要六寸的三十根约一两）}
 
 \preparation
 
 \step 先将鱼翅洗净，用水发胀后，用清水汆过，捞起滤干晾起。鸡蛋二个摊成蛋皮，同
-火腿、熟鸡肉、鲜笋分别切成二粗丝。连同鱼翅将每一种分成三十份，用代丝捆成三十
+火腿、熟鸡肉、鲜笋分别切成二粗丝。连同鱼翅将每一种分成三十份，用带丝捆成三十
 把，放在盘内摆好，用热汤漂起。
 
 \step 将锅放在火炉上倒入鸡汤，烧至微开；再用少量清水将鸡脯茸子澥散，倒入锅内；
