Add note for DAIPI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -265,6 +265,8 @@
 
 \reciperef{234}。“椿芽”，《四》本《八》本作“春芽”。径改。
 
+\reciperef{244}。“带皮”，海带。又叫海藻、昆布、海布。
+
 \reciperef{245}。“盐六分”，《四》本《八》本作“盐一分”。据《中》本改。《四》本
 《八》本无脚注{\footnotesize\circled{1}\circled{2}\circled{3}\circled{4}}。据
 《中》本补。
