Add a note for YUWAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -76,6 +76,10 @@
 \reciperef{9}。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》本
 改。
 
+\recipelist{15,26,35,73,95,96,106,111,113,191,217,225,264}。“鱼碗”，一种盛菜或
+装汤的大碗。在四川一带此叫法居多，其尺寸比斗碗大，约为7至11寸，碗深度比斗碗稍
+浅。也叫小鱼钵。“斗碗”，也是指大碗。旧时民间指较大的土碗。
+
 \recipelist{16,66,115,164}。“腌”，《四》本《八》本作“醃”。径改。
 
 \reciperef{17}。“瓤”，各本皆作“穰”。径改。
