--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -269,7 +269,7 @@
 
 \reciperef{234}。“椿芽”，《四》本《八》本作“春芽”。径改。
 
-\reciperef{244}。“带皮”，海带。又叫海藻、昆布、海布。
+\reciperef{244}。“带皮”，海带。又称海藻、昆布、海布。
 
 \reciperef{245}。“盐六分”，《四》本《八》本作“盐一分”。据《中》本改。《四》本
 《八》本无脚注{\footnotesize\circled{1}\circled{2}\circled{3}\circled{4}}。据
@@ -294,7 +294,7 @@
 \reciperef{273}。各本标题皆作“汗蒸鱼”。径改。
 
 \reciperef{292}。“莴笋”，《四》本《八》本作“窝笋”。径改。\\%
-“瓢儿白”，上海白菜。又叫上海青、苏州青、青江菜、小棠菜、青梗白菜、青江白菜、
+“瓢儿白”，上海白菜。又称上海青、苏州青、青江菜、小棠菜、青梗白菜、青江白菜、
 汤匙菜等。
 
 \recipelist{303,307}。“仔公鸡”，《四》本《八》本作“子公鸡”。径改。
