--- a/latex/recipe-100.tex
+++ b/latex/recipe-100.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}[叫化鸡]{泥糊鸡}
+\begin{recipe}[叫花鸡]{泥糊鸡}
 
 \ingredients
 
