--- a/latex/recipe-093.tex
+++ b/latex/recipe-093.tex
@@ -54,7 +54,7 @@
 \step 先用芝麻一半在九寸盘内铺匀，再放拌好的馅于盘内，用手拍压平整约四分厚，剩
 余一半芝麻均匀地撒在上面成半制品。
 
-\step 炒锅在中火上先放菜油四两，烧至四成热，即将盘内加工好的半制品由锅边轻轻梭
+\step 炒锅在中火上先放菜油四两，烧至四成热，即将盘内加工好的半制品由锅边轻轻趖
 下，炸至进皮，滗去油，将锅一簸，翻面再炸。为了保持四至五成的油温，用瓢子逐渐加
 添新油，这样使油浸透、炸酥而又避免炸糊。
 
