--- a/latex/recipe-137.tex
+++ b/latex/recipe-137.tex
@@ -53,7 +53,7 @@
 \step 鱼破腹，去内脏，挖鳃，去鳞，用刀划成鱼鳃纹；火腿、熟鸡肉、净鲜笋、鸡松、
 葱白、泡红辣椒，分别切成细丝，姜拍破，鸡油蒸熟。
 
-\step 油在锅内烧至八成热，将鱼梭下炸一火，滗去炸油，留油二两，加姜一跑，烹料
+\step 油在锅内烧至八成热，将鱼趖下炸一火，滗去炸油，留油二两，加姜一跑，烹料
 酒，掺汤，放入火腿、鸡肉、鲜笋、菌子等丝及盐、胡椒、味精，合烧十分钟，翻面再烧
 五分钟，用筷子将鱼拈入盘内，勾二流芡，淋上鸡油，并撒葱丝、鱼辣椒丝在面上即成。
 
