--- a/latex/recipe-251.tex
+++ b/latex/recipe-251.tex
@@ -54,7 +54,7 @@
 \step 酱油碟十二个，先在碟底抹化猪油少许，将鸽蛋打开每个碟内装一个，上笼蒸熟
 （进皮收心）。
 
-\step 用肉茸先将汤清好，放酱油、味精、料酒、胡椒面。走菜时将芙蓉蛋梭入碗内，鸽
+\step 用肉茸先将汤清好，放酱油、味精、料酒、胡椒面。走菜时将芙蓉蛋趖入碗内，鸽
 蛋翻于芙蓉蛋上再撒以火腿、鲜笋等片，灌入清汤即成。
 
 \features
