--- a/latex/recipe-292.tex
+++ b/latex/recipe-292.tex
@@ -50,8 +50,8 @@
 \preparation
 
 各种蔬菜分别煮至半熟，用清水漂冷，连同冬菇、黄花岔开颜色摆入盘内。鸡汤烧沸，轻
-轻梭进摆好的各种蔬菜，加进胡椒、食盐和绍酒等，以文火烧至刚好时，即倒进牛奶，刚
-煮沸后，起锅斜梭盘内，须保持原状不乱。
+轻趖进摆好的各种蔬菜，加进胡椒、食盐和绍酒等，以文火烧至刚好时，即倒进牛奶，刚
+煮沸后，起锅斜趖盘内，须保持原状不乱。
 
 \features
 
