--- a/latex/recipe-123.tex
+++ b/latex/recipe-123.tex
@@ -51,7 +51,7 @@
 放，去净血水。
 
 \step 油在锅内烧至八成热，将𬂁肝炸干水气捞起；滗去炸油，留油二两，把干辣椒煵成
-黄色；倒下花椒，烹入料酒，梭下𬂁肝，加酱油，掺汤，下味精、白糖，滋汁收干，淋香
+黄色；倒下花椒，烹入料酒，趖下𬂁肝，加酱油，掺汤，下味精、白糖，滋汁收干，淋香
 油于𬂁肝上，几簸起锅。
 
 \features
